--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -11788,6 +11788,76 @@ var getMinimumDifference = function(root) {
 };
 ```
 
+---
+
+## 532. 数组中的 k-diff 数对
+
+给你一个整数数组 nums 和一个整数 k，请你在数组中找出 不同的 k-diff 数对，并返回不同的 k-diff 数对 的数目。
+
+k-diff 数对定义为一个整数对 (nums[i], nums[j]) ，并满足下述全部条件：
+
+0 <= i, j < nums.length
+i != j
+nums[i] - nums[j] == k
+注意，|val| 表示 val 的绝对值。
+
+提示：
+
+1 <= nums.length <= 104
+-107 <= nums[i] <= 107
+0 <= k <= 107
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var findPairs = function(nums, k) {
+    nums.sort((a, b) => a - b);
+    let ans = 0;
+    let n = nums.length;
+    for (let i = 0; i < n; i++) {
+        if (nums[i] === nums[i - 1]) {
+            continue;
+        }
+        for (let j = i + 1; j < n; j++){
+            if ((j !== i + 1) && nums[j] === nums[j - 1]) {
+                continue;
+            }
+            let diff = nums[j] - nums[i];
+            if (diff === k) {
+                ans++;
+            } else if (diff > k) {
+                break;
+            }
+        }
+    }
+    return ans;
+};
+
+let nums = [3, 1, 4, 1, 5], k = 2;
+let result = findPairs(nums, k);
+console.log(result);
+```
+
+```js
+var findPairs = function(nums, k) {
+   const visited = new Set();
+   const res = new Set();
+    for (let num of nums) {
+        if (visited.has(num - k)) {
+            res.add(num - k);
+        }
+        if (visited.has(num + k)) {
+            res.add(num);
+        }
+        visited.add(num);
+    }
+    return res.size;
+};
+```
+
 
 
 
