--- a/面试学习题目/前端面试_17_浏览器部分.md
+++ b/面试学习题目/前端面试_17_浏览器部分.md
@@ -1083,3 +1083,752 @@ var lowestCommonAncestor = function(root, p, q) {
 
 -----
 
+###   **3.** **cookie、localStorage、sessionStorage区别？**
+
+cookie是服务器发给客户端的一种特殊认证信息，通常以文本的方式保存在客户端，始终在同源的http请求中携带（即使不需要），以供服务器验证当前浏览器用户身份，常见应用场景：验证用户身份、保存上次登录信息、统计浏览次数
+
+sessionStorage和localStorage仅用于本地保存，不会自动把数据发给服务器
+
+|                | 有期时间                                           | 作用域                                                       | 存储大小                           | 存储位置 |
+| -------------- | -------------------------------------------------- | ------------------------------------------------------------ | ---------------------------------- | -------- |
+| cookie         | 在过期时间前一直有效（即使浏览窗口器关闭）         | domain本身以及domain下的所有子域名（跨域请求的 cookie在fetch时需要设置 withCredentials） | 不能超过4k                         | 浏览器端 |
+| localStorage   | 长期存储，浏览器窗口关闭数据不丢失（除非主动删除） | 所有同源窗口共享                                             | 虽有存储大小限制，但可达到5M或更大 |          |
+| sessionStorage | 临时存储，当前浏览器窗口关闭后自动删除             | 不同浏览器窗口不共享                                         |                                    |          |
+
+----
+
+### **4.** **WebSocket协议及实现原理？**
+
+HTTP协议有一个局限：通信只能由客户端发起，服务器端不能实时发送最新数据给客户端（具有被动性）
+
+数据交互有两种模式：Push（推模式）、Pull（拉模式）
+
+- Push：客户端与服务端建立好**网络长连接**，服务器有相关数据，直接通过长连接通道推送到客户端
+
+- Pull：客户端主动向服务端**发出请求**，拉取相关数据
+
+
+那怎么获取最新数据呢？ 传统有两种方式：轮询、长轮询
+
+- 轮询：开启一个定时器，每隔一段时间调用Ajax请求一次数据
+
+
+- 长轮询：本质也是轮询，不过是阻塞型（一直打电话，没收到就不挂电话），客户端发起连接后，如果没消息，就一直不返回Response给客户端，直到有消 息才返回或超时。基于事件的触发，一个事件接一个事件。
+
+
+而**WebSocket协议只需要发送一次请求**，只要服务器有最新数据就会自动发送给客户端，不用重复请求（类似天气预报，每当天气有变化则会自动更新最新天气状况）
+
+**WebSocket协议没有同源限制，**客户端可与任意服务器通信，可用于解决跨域
+
+实现原理：
+
+WebSocket是一个应用层协议，必须依赖 HTTP 协议进行第一次握手 ，握手成功后，数据就直接从 TCP 通道传输，与 HTTP 再无关联。WebSocket进行了**HTTP握手 + 双工的TCP数据传输**
+
+协议以frame形式传输数据，会将一条消息分为几个frame，按照先后顺序传输。大数据可以分片传输，不用考虑到数据大小导致的长度标志位不足够的情况，可以边生成数据边传递消息，传输效率高
+
+```js
+// Create WebSocket connection.
+const socket = new WebSocket('ws://localhost:8080');
+
+// Connection opened
+socket.addEventListener('open', function (event) {
+    socket.send('Hello Server!');
+});
+
+// Listen for messages
+socket.addEventListener('message', function (event) {
+    console.log('Message from server ', event.data);
+});
+
+```
+
+---
+
+
+
+----
+
+## 1.3 请问你了解浏览器的渲染机制？
+
+首先，浏览器的渲染机制中有几个基本概念名称：
+
+（1）、DOM：浏览器将HTML解析成树形的数据结构
+
+```
+文档对象模型 (DOM) 将 web 页面与到脚本或编程语言连接起来。通常是指  JavaScript，但将 HTML、SVG 或 XML 文档建模为对象并不是 JavaScript 语言的一部分。DOM模型用一个逻辑树来表示一个文档，树的每个分支的终点都是一个节点(node)，每个节点都包含着对象(objects)。DOM的方法(methods)让你可以用特定方式操作这个树，用这些方法你可以改变文档的结构、样式或者内容。节点可以关联上事件处理器，一旦某一事件被触发了，那些事件处理器就会被执行。
+```
+
+（2）、CSSOM：浏览器将CSS解析成树形的数据结构
+
+```
+CSS 对象模型 (CSSOM) 是树形形式的所有CSS选择器和每个选择器的相关属性的映射，具有树的根节点，同级，后代，子级和其他关系。CSSOM 与 文档对象模型(DOM) 非常相似。两者都是关键渲染路径的一部分，也是正确渲染一个网站必须采取的一系列步骤。
+
+CSSOM 与 DOM一起构建渲染树，浏览器依次使用渲染树来布局和绘制网页。
+
+CSS 对象模型也是一组API，允许从JavaScript 操纵 CSS。它非常类似于DOM，但应用于 CSS 而不是 HTML。它允许用户动态读取和修改 CSS样式。
+```
+
+（3）、Render Tree：DOM和CSSOM合并后生成Render Tree（渲染树）
+
+（4）、Layout：计算出Render Tree每个节点的具体位置置
+
+（5）、Painting：通过显卡，将Layout后的节点内容分别呈现到屏幕上
+
+浏览器整个渲染流程如下：
+
+（1）、用户输入一个URL后，浏览器就会向服务器发出一个请求，请求URL对应的资源
+
+（2）、接到服务器的响应内容后，浏览器的HTML解析器，会将HTML文件解析成一颗DOM树，DOM树的构建是一个深度遍历的过程，当前节点的所有子节点都构建完成后，才会去构建当前节点的下一个兄弟节点
+
+（3）、将CSS解析成CSSOM树
+
+（4）、根据DOM树与CSSOM树，构建Render Tree
+
+（5）、浏览器会根据Render Tree能知道网页中哪些有节点，各个节点的CSS，以及各个节点的从属关系
+
+（6）、计算出每个节点在屏幕中的位置后，最后一步就是Painting，根据计算出的规则，把内容画到屏幕上
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633683890278/9F4F2AB266BD95CA60C23F32300F594A)
+
+注意：
+
+浏览器在获得HTML文件后，是自上而下的加载，并在加载过程中进行解析与渲染
+
+加载过程中：
+
+遇到外部CSS文件和图片等静态资源时，浏览器会另外发送一个异步请求
+
+遇到js文件时，HTML文件会挂起渲染的进程，等待js文件加载完毕后，再继续进行渲染，因为js可能会修改DOM，导致后续HTML资源白白加载，这也是为什么建议将js文件写在底部body标签前
+
+----
+
+## 1.4 请问如何解决浏览器加载js时的阻塞问题吗？
+
+**（1）、推迟加载**
+
+若页面初始的渲染并不依赖于js或CSS可以用推迟加载，最后在加载js和CSS，把引用外部文件的代码写在最后
+
+**（2）、defer延迟加载**
+
+```html
+<script src="" defer></script>
+```
+
+在文档解析完成开始执行，并且在DOMContentLoaded事件之前执行完成，会按照在文档出现的顺序去下载解析，效果和把script放在文档最后</body>之前是一样
+
+    注意：**defer最好用在引用外部文件中使用**，用了defer不要使用document.write()方法，使用defer时最好不要请求样式信息，因为样式表可能尚未加载，浏览器会禁止该脚本等待样式表加载完成，相当于样式表阻塞脚本执行
+
+**（3）、异步加载**
+
+async异步加载：就是告诉浏览器不必等到加载完外部文件，可以边渲染边下载，什么时候下载完成什么时候执行
+
+```html
+ <script type="text/javascript" src="a.js" async></script>
+```
+
+**（4）script dom element：**用js动态创建一个script元素添加在document中
+
+注意：会阻止onload事件
+
+```html
+<script type="text/javascript">
+    (function() {
+     var s = document.createElement('script');
+     s.type = 'text/javascript';
+     s.async = true;                   //这句可以删除，但是效果不变。
+     s.src = 'js/a.js';
+     var x = document.getElementsByTagName('script')[0];
+     x.parentNode.insertBefore(s, x);
+ })();
+</script>
+```
+
+**（5）onload时异步加载：**与script dom element法差不多，但不是同时执行js和html，是等html的文件、图片之类的、页面所有的资源全部加载完成后再下载执行js，这样的方法可以避免阻塞onload事件的触发
+
+**注意：**DOMContentLoaded与onload事件不同，DOMContentLoaded是页面解析完成，页面的dom元素可以使用，但是页面的图片、视频等资源可能还没加载完成
+
+----
+
+## 1.5 请问你了解什么是重绘？什么是回流？两者有何区别？
+
+**重绘：**
+
+更换某个元素颜色，这样的行为是不影响页面布局，DOM树不会变化，但颜色变了，使该元素所在的 Layer 重新渲染
+
+常见情况：
+
+（1）、回流必定引发重绘，但重绘也会单独触发
+
+（2）、背景色、颜色、字体改变（字体大小改变，会触发回流）
+
+**回流：**
+
+增删DOM节点，或修改一个元素的宽高，页面布局发生变化，DOM树结构发生变化，需要重新构建DOM树，而DOM树与渲染树是紧密相连的，DOM树构建完，渲染树也会随之对页面进行再次渲染
+
+**常见情况：**
+
+（1）、页面渲染初始化
+
+（2）、DOM树变化（添加或者删除可见的DOM元素、元素位置改变）
+
+（3）、Render树变化（元素尺寸改变：边距、填充、边框、宽度和高度）
+
+（4）、浏览器窗口尺寸改变，resize事件发生
+
+（5）、内容改变：文本改变或者图片大小改变而引起的计算值宽度和高度改变；
+
+（6）、查询布局信息，包括offestLeft/Top/Width/Height、scrollLeft/Top/Width/Height、clientLeft/Top/Width/Height、浏览为了返回最新值，会触发回流
+
+-----
+
+## 2.1 请问在浏览器中输入 URL后，浏览器会做哪些工作？
+
+从输入URL到渲染出整个页面包括三个部分：
+
+**（1）、DNS解析URL**
+
+DNS解析就是**寻找哪个服务器上有请求的资源**，因为ip地址不易记忆，一般会使用URL域名（如[www.baidu.com](http://www.baidu.com/)）作为网址，**DNS解析就是将域名“翻译”成IP地址**
+
+具体过程：
+
+a、浏览器缓存：浏览器会按照一定的频率，缓存DNS记录
+
+b、操作系统缓存：如果浏览器缓存中找不到需要的DNS记录，就会去操作系统中找
+
+c、路由缓存：路由器也有DNS缓存
+
+d、ISP的DNS服务器：ISP有专门的DNS服务器应对DNS查询请求
+
+e、根服务器：ISP的DNS服务器找不到，就要向根服务器发出请求，进行递归查询
+
+**（2）、浏览器发送请求与服务器交互**
+
+a、浏览器**利用tcp协议**通过三次握手与服务器建立连接
+
+http请求包括header和body，header中包括请求的方式（get和post）、请求的协议 （http、https、ftp）、请求的地址ip、缓存cookie，body中有请求的内容
+
+b、浏览器根据解析到的IP地址和端口号发起http的get请求
+
+c、服务器接收到http请求之后，开始搜索html页面，并使用http返回响应报文
+
+d、若状态码为200显示响应成功，浏览器接收到返回的HTML页面后，开始渲染页面
+
+**（3）、浏览器对接收到的HTML页面进行渲染**
+
+a、浏览器根据**深度遍历**的方式把HTML节点遍历成DOM树
+
+b、将CSS解析成CSSOM树
+
+c、将DOM树和CSSOM树构造成Render树
+
+d、根据Render树计算所有节点在屏幕中的位置，进行布局（回流）
+
+e、遍历Render树并调用硬件API绘制所有节点（重绘）
+
+---
+
+## 2.2 请问你了解浏览器缓存吗？
+
+缓存可以重复利用文件，降低网络负荷，提高网页打开速度，提升用户体验
+
+缓存分类：
+
+从宏观上分为**私有缓存**和**共享缓存**，共享缓存就是那些能被各级代理缓存的缓存，私有缓存就是用户专享的，各级代理不能缓存
+
+从微观上可以分为以下几类：
+
+a、浏览器缓存
+
+b、代理服务器缓存
+
+c、CDN缓存
+
+d、数据库缓存
+
+e、应用层缓存
+
+主要对浏览器的缓存进行分析：
+
+![img](https://uploadfiles.nowcoder.com/compress/mw1000/images/20211008/897353_1633685850116/826C8F1D891122B9999FE81E1D55CA33)
+
+**（1）、HTTP缓存：主要分为强缓存与协商缓存**
+
+- 强缓存
+
+强可理解为强制的意思，当浏览器去请求某个文件的时候，**服务端就在respone header里面对该文件做了缓存配置**。缓存的时间、缓存类型都由服务端控制，具体由 respone header 的cache-control 控制，常见的设置是max-age public， private ，no-cache ，no-store等，各类设置对应情况：
+
+a、cache-control: **max-age=xxxx，public**
+
+**客户端和代理服务器都可以缓存该资源**，客户端在xxx秒的有效期内，如果有请求该资源的需求的话就直接读取缓存，statu code200 ，如果用户做了刷新操作，就向服务器发起http请求
+
+b、cache-control: **max-age=xxxx，private**
+
+**只让客户端可以缓存该资源**；代理服务器不缓存，客户端在xxx秒内直接读取缓存，statu code:200
+
+c、cache-control: **max-age=xxxx，immutable**
+
+客户端在xxx秒的有效期内，如果有请求该资源的需求的话就直接读取缓存，statu code:200 ，**即使用户做了刷新操作，也不向服务器发起http请求**
+
+d、cache-control: **no-cache**
+
+跳过设置强缓存，**但不妨碍设置协商缓存**；通常做了强缓存，只有强缓存失效了才走协商缓存的，**设置了no-cache就不会走强缓存了，每次请求都回询问服务端**
+
+e、cache-control: no-store
+
+**不缓存**，客户端、服务器都不缓存
+
+- 协商缓存
+
+可理解为**强缓存就是为资源设置一个有效时间，每次请求资源时都会检查是否过期，只有过期才会去请求服务器**（可有效减少请求次数），当强制缓存失效后，浏览器携带**缓存标识**向服务器发起请求，由服务器根据缓存标识决定是否使用缓存的过程协商缓存生效，返回304和Not Modified
+
+在 response header里面的设置etag、last-modified
+
+**etag**：每个文件具有唯一一个“标识”
+
+**last-modified**：文件的修改时间，精确到秒
+
+每次请求返回携带**response header**中的etag和last-modified，在下次请求时**request header**也会带上，服务端对比etag标识，判断资源是否更改，**如更改直接返回新的资源**，**并更新response header的etag、last-modified**，如资源不变，etag、last-modified不变，**对客户端来说，每次请求都进行了协商缓存**，即：
+
+发请求-->资源是否过期？-->过期（没过期为强缓存）-->请求服务器-->服务器对比资源是否真的过期？-->没过期-->返回304状态码-->客户端用缓存的老资源
+
+当服务端发现资源过期时：
+
+服务器对比资源是否真的过期-？->过期-->返回200状态码-->客户端像第一次接收该资源一样，记录cache-control中的max-age、etag、last-modified等信息
+
+**（2）、本地存储**
+
+主要有：localStorage，sessionStorage和cookie，WebSql和IndexDB主要用在前端有**大容量存储需求的页面上**，如在线编辑浏览器或者网页邮箱，可以将数据存储在浏览器，应该根据不同的场景进行使用
+
+- Cookie
+
+**由服务器生成，且前端也可设置**，保存在客户端本地的一个文件，通过response header的set-Cookie字段进行设置，且Cookie的内容自动在请求的时候被传递给服务器
+
+其中包含的信息：
+
+a、用户ID、密码、浏览过的网页、停留的时间等信息，当该用户再打开该网站时，网站通过读取Cookie，就可以做出相应的动作，如身份校验、提示语等
+
+b、还保存host属性，即网站的域名或ip，一个网站只能读取它自己放置的信息，不能读取其他网站的Cookie文件
+
+Cookie **优点**：给用户更人性化的使用体验，如自动登陆、提示语；**弥补了HTTP无连接特性**；可作为站点统计访问量依据
+
+Cookie **缺点**：无法解决多人共用电脑问题，具有安全隐患；Cookie文件容易被误删除；可人为修改host文件，可以非法访问目标站点的Cookie；容量较小，不能超过4kb；直接在response header上带数据安全性差
+
+- LocalStorage（本地存储）
+
+主要是开发人员在前端设置，一旦数据保存在本地后，就可避免再向服务器请求数据，从而减少不必要的数据请求，可以长期存储数据，没有时间限，遵循同源策略，不同的网站不能直接共用
+
+一般浏览器localStorage支持的是5M大小，不同的浏览器会略有不同
+
+LocalStorage **优点**：拓展了Cookie的4k限制；可以将第一次请求的5M大小数据直接存储到本地，相比于Cookie节约带宽
+
+LocalStorage **缺点**：需要手动删除，否则长期存在；浏览器大小不一，版本的支持也不一样；**只支持string类型的存储**，JSON对象需要转换；本质上是对字符串的读取，存储内容过多会消耗内存空间，导致卡顿
+
+- SessionStorage（会话存储）
+
+同样是开发人员在前端设置，用于**临时保存同一窗口(或标签页)的数据**，在关闭窗口或标签页之后将会删除这些数据，大多数浏览器限制为5MB
+
+- WebSQL
+
+WebSQL 是在浏览器上模拟数据库，可以使用JS来操作SQL进行数据读写，使用 SQL 来操纵客户端数据库的 API（**异步**），现阶段使用较少
+
+- IndexedDB
+
+随浏览器的功能日益强大，越来越多的网站将大量数据储存在客户端，可减少从服务器获取数据，直接从本地获取数据
+
+现有浏览器数据储存方案，都不适用于储存大量数据：Cookie 大小不超过4KB，且每次请求都会发送回服务器；LocalStorage 大小在2.5MB 到 10MB 之间（各家浏览器不同），且不提供搜索功能，不能建立自定义的索引。
+
+IndexedDB 是浏览器提供的本地数据库，**可被网页脚本创建和操作**。IndexedDB 允许储存大量数据，**提供查找接口，还能建立索引**。但IndexedDB 不属于关系型数据库（不支持 SQL 查询语句），更接近 NoSQL 数据库
+
+----
+
+
+
+---
+
+## 2.3 请问Cookie和Session的机制是什么？两者有什么区别？
+
+cookie 机制是通过检查**客户身上的“通行证”**来确定客户身份，session 机制就是通过检查**服务器上的“客户明细表”**来确认客户身份。
+
+session 可理解为在服务器上建立一份客户档案，客户来访的时候只需要查询客户档案表是否有该客户，**session 是基于 cookie 实现的**
+
+cookie 和 session 的区别：
+
+**存储位置**： cookie 存在于客户端，临时文件夹中；session 存在于服务器的内存中，一个 session 域对象为一个用户浏览器服务
+
+**安全性**： cookie 是以明文的方式存放在客户端的，安全性低，可以通过一个加密算法进行加密后存放；session 存放于服务器的内存中，所以安全性好
+
+**生命周期**(以 20 分钟为例) ：cookie 的生命周期是**累计的**，从创建时，就开始计时，20 分钟后 cookie 生命周期结束； session 的生命周期是**间隔的**，从创建时，开始计时，在 20 分钟内，没有访问 session，那 session 生命周期被销毁。如在 20 分钟内（如在第 19 分钟时）访问过 session，那将重新计算 session 的生命周期。关机会造成 session 生命周期的结束，但是对 cookie 没有影响
+
+**访问范围**： cookie 为多个用户浏览器共享；session 为一个用户浏览器独享
+
+---
+
+## 2.4 请问GET请求和POST请求区别？
+
+**参数传递**：GET 参数通过 url 传递，POST 放在 body 中（http 协议规定，url 在请求头中，所以大小限制很小）
+
+**长度限制**：GET 请求在 url 中传递的参数是有长度限制的，POST 没有
+
+**参数类型**：对参数的数据类型，**GET 只接受 ASCII字符**（发起之前需要进行 UrlEncoding），而 POST 没有限制
+
+**回退影响**：GET 在浏览器回退时是无害的，**POST 会再次提交请求**
+
+**安全性**：GET 比 POST 不安全，参数直接暴露在 url 中，不能用来传递敏感信息
+
+**请求过程**：GET 产生一个 TCP 数据包；POST 产生两个 TCP 数据包（大多数浏览器）。对于 GET 请求，浏览器会把 http 的 header 和 data 一并发送出去，服务器响应200（返回数据）；而 POST请求，浏览器先发送 header，服务器响应100 continue，浏览器再发送 data，服务器响应200 ok（返回数据）
+
+-----
+
+## 2.5 请问HTTP状态码有哪些分类，你了解哪些状态码？
+
+| **类别** | **原因短语**                 |                                    |
+| -------- | ---------------------------- | ---------------------------------- |
+| 1XX      | Informational（信息性状态码) | 接受的请求正在处理                 |
+| 2XX      | Success（成功状态码）        | 请求正常处理完毕                   |
+| 3XX      | Redirection（重定向）        | 需要进行附加操作以完成请求         |
+| 4XX      | Client error（客户端错误）   | 客户端请求出错，服务器无法处理请求 |
+| 5XX      | Server Error（服务器错误）   | 服务器处理请求出错                 |
+
+常见HTTP 状态码：
+
+**1xx（请求状态）：**
+
+100 ： 继续，请求者应当继续提出请求。**服务器返回此代码表示已收到请求的第一部分**，正在等待其余部分
+
+101 ：切换协议，请求者已要求服务器切换协议，服务器已确认并准备切换
+
+
+
+**2xx（成功）：**
+
+200：成功，服务器已经成功处理了请求
+
+201：已创建，请求成功并且服务器创建了新的资源
+
+202：已接受，服务器已接受请求，但尚未处理
+
+203：**非授权信息**，服务器已经成功处理了请求，但返回的信息可能来自另一来源
+
+204：无内容，服务器成功处理了请求，但没有返回任何内容
+
+205：重置内容，服务器成功处理了请求，但没有返回任何内容
+
+206：部分内容，服务器成功处理了部分GET请求
+
+
+
+**3xx（重定向）：**
+
+300：多种选择，针对请求，服务器可执行多种操作。服务器可根据请求者（user agent）选择一项操作，或提供操作列表供请求者选择
+
+301：**永久移动**，请求的网页已永久移动到新位置。服务器返回此响应（对GET或HEAD请求的响应）时，会自动将请求者转到新位置
+
+302：**临时移动**，服务器目前从不同位置的网页响应请求，但请求者应继续使用原有位置来进行以后的请求
+
+303：**查看其它位置**，请求者应当对不同的位置使用单独的GET请求来检索响应时，服务器返回此代码
+
+304：**未修改，自上次请求后，请求的网页未修改过**。服务器返回此响应，不会返回网页的内容
+
+305：**使用代理**，请求者只能使用代理访问请求的网页。如果服务器返回此响应，还表示请求者应使用代理
+
+307：**临时性重定向**，服务器目前从不同位置的网页响应请求，但请求者应继续使用原有的位置来进行以后的请求
+
+
+
+**4xx（客户端请求错误）：**
+
+400：**错误请求**，服务器不理解请求的语法
+
+401：**未授权**，请求要求身份验证。对于需要登录的网页，服务器可能返回此响应
+
+403：**禁止**，服务器拒绝请求
+
+404：**未找到**，服务器找不到请求的网页
+
+405：方法禁用，禁用请求中指定的方法
+
+406：**不接受**，无法使用请求的内容特性响应请求的网页
+
+407：**需要代理授权**，此状态码与401（未授权）类似，但指定请求者应当授权使用代理
+
+408：**请求超时**，服务器等候请求时发生超时
+
+409：冲突，服务器在完成请求时发生冲突。服务器必须在响应中包含有关冲突的信息
+
+410：**已删除**，如果请求的资源已永久删除，服务器就会返回此响应
+
+411：需要有效长度，服务器不接受不含有效内容长度标头字段的请求
+
+412：未满足前提条件，服务器未满足请求者在请求者设置的其中一个前提条件
+
+413：请求实体过大，服务器无法处理请求，因为请求实体过大，超出了服务器的处理能力
+
+414：**请求的URI过长**，请求的URI（通常为网址）过长，服务器无法处理
+
+415：不支持媒体类型，请求的格式不受请求页面的支持
+
+416：**请求范围不符合要求**，如果页面无法提供请求的范围，则服务器会返回此状态码
+
+417：未满足期望值，服务器未满足“期望”请求标头字段的要求
+
+
+
+**5xx（服务器错误）：**
+
+500：**服务器内部错误**，服务器遇到错误，无法完成请求
+
+501：尚未实施，服务器不具备完成请求的功能。例如，服务器无法识别请求方法时可能会返回此代码
+
+502：**错误网关**，服务器作为网关或代理，从上游服务器无法收到无效响应
+
+503：**服务器不可用**，服务器目前无法使用（由于超载或者停机维护）。通常，这只是暂时状态
+
+504：网关超时，服务器作为网关代理，但是没有及时从上游服务器收到请求
+
+505：HTTP版本不受支持，服务器不支持请求中所用的HTTP协议版本
+
+-----
+
+## 3.1 请谈谈你对浏览器的理解？
+
+浏览器的主要功能是将用户选择的 web 资源呈现出来，它需要从服务器请求资源，并将其显示在浏览器窗口中，资源的格式通常是 HTML，也包括 PDF、image 及其他格式
+
+HTML 和 CSS 规范中规定了浏览器解释 html 文档的方式，由 W3C 组织对这些规范进行维护，但各浏览器厂商纷纷开发自己的扩展功能，对规范遵循并不完善，这便导致了严重的兼容性问题
+
+简单来说浏览器可以分为两部分，shell 和 内核。其中 shell 的种类相对比较多，内核则比较少
+
+**shell** 是指**浏览器外壳**：例如菜单，工具栏等，主要是提供给用户界面操作，参数设置，是调用内核来实现各种功能的
+
+**内核** 是**浏览器的核心**，是基于标记语言显示内容的程序或模块
+
+---
+
+## 3.2 请谈谈你对浏览器内核的理解？
+
+浏览器内核主要分成两部分：
+
+**渲染引擎：**其职责就是渲染，**即在浏览器窗口中显示所请求的内容**。默认情况下，渲染引擎可以显示 html、xml 文档及图片，它也可以借助插件显示其他类型数据，例如使用 PDF 阅读器插件显示 PDF 格式
+
+**JS 引擎：**解析和执行 javascript 来实现网页的动态效果
+
+起初渲染引擎和 JS 引擎区分并不明确，而后 JS 引擎越来越独立，**内核就倾向于只指渲染引擎**
+
+**目前常见的浏览器内核：**
+
+**IE 浏览器：**Trident 内核，也俗称 IE 内核
+
+**Chrome 浏览器：**统称为 Chromium 内核或 Chrome 内核，以前是 Webkit 内核，**现在是 Blink内核**
+
+F**irefox 浏览器：**Gecko 内核，俗称 Firefox 内核
+
+**Safari 浏览器：**Webkit 内核
+
+**Opera 浏览器：**最初是自家公司的 Presto 内核，后来从 Webkit 又转到了 Blink 内核
+
+**360浏览器、猎豹浏览器内核：**IE + Chrome 双内核
+
+**搜狗、遨游、QQ 浏览器内核：**Trident（兼容模式）+ Webkit（高速模式）
+
+---
+
+## 3.3 请问你了解ajax请求吗？
+
+传统请求方法的缺点:
+
+传统的web请求是用户触发一个http请求服务器，服务器收到后，响应到用户，并返回一个新的页面，每当服务器处理客户端请求时，客户都只能空闲等待，哪怕只是一次很小的交互，都要返回一个完整的HTML页，并且浪费时间和带宽去重新读取整个页面，这导致了用户界面的响应比本地应用慢得多
+
+ajax 是一种用于创建快速页的技术，**通过在后台与服务器进行少量数据交换，可使网页实现异步更新**，**在不重新加载整个网页的情况下，对网页的某部分进行更新**
+
+ajax请求步骤：
+
+a、创建XMLHTTPRequest对象（通过 XMLHttpRequest 可以在不刷新页面的情况下请求特定 URL，获取数据，常用于ajax请求）
+
+b、使用open方法设置和服务器的交互信息
+
+c、设置发送的数据，开始和服务器端交互
+
+d、注册事件
+
+e、更新界面
+
+---
+
+## 3.4 请问ajax是如何发请求的？
+
+get请求：
+
+```js
+//一、创建XMLHTTPRequest对象
+var ajax = new XMLHttpRequest();
+
+//二、设置请求url参数，（请求的类型，请求的url，可以带参数，动态的传递参数starName到服务端）
+ajax.open('get','getStar.php?starName='+name);
+
+//三、发送请求
+ajax.send();
+
+//四、注册事件onreadystatechange状态改变就会调用
+ajax.onreadystatechange = function () {
+    if (ajax.readyState==4 && ajax.status==200) {
+	//五、if条件为true，数据请求成功，并且请求的页面是存在的　　　　           
+    	console.log(ajax.responseText);
+    }
+}
+```
+
+关于if判断语句中的状态值：
+
+**status：**服务器的Http状态码，若是200，则表示OK，404，表示为未找到
+
+**readyState属性**有五个状态值：
+
+0：uninitialized：未初始化，已经创建了XMLHttpRequest对象但是未初始化
+
+1：loading：已经开始准备好要发送了
+
+2：loaded,：已经发送，但是还没有收到响应
+
+3：interactive：正在接受响应，但是还没接收完
+
+4：completed：接受响应完毕
+
+**post请求：**
+
+```js
+//一、创建XMLHTTPRequest对象
+var ajax = new XMLHttpRequest();
+
+//二、设置请求的类型及url
+//post请求一定要添加请求头才行不然会报错
+ajax.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+ajax.open('post', '02.post.php' );
+
+//三、发送请求
+ajax.send('name=fox&age=18');
+
+ajax.onreadystatechange = function () {
+// 判断服务器是否正确响应
+    if (ajax.readyState == 4 && ajax.status == 200) {
+        console.log(ajax.responseText);
+    } 
+};
+```
+
+可进行一定的封装：
+
+```js
+function ajax_method(url,data,method,success) {
+    //创建XMLHTTPRequest对象
+    var ajax = new XMLHttpRequest();
+    // get请求
+    if (method=='get') {
+        if (data) {
+            // 如果有值
+            url+='?';
+            url+=data;
+        }else{
+        }
+        // 设置请求方法以及url
+        ajax.open(method,url);
+        // 发送请求
+        ajax.send();
+    }else{
+        // post请求，url是不需要改变
+        ajax.open(method,url);
+        // 需要设置请求报文
+        ajax.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+        // 判断data，send发送数据
+        if (data) {
+            // 如有值从send发送
+            ajax.send(data);
+        }else{
+            //直接发送
+            ajax.send();
+        }
+    }
+    // 注册事件
+    ajax.onreadystatechange = function () {
+        // 在事件中获取数据，并修改显示界面
+        if (ajax.readyState==4 && ajax.status==200) {
+            // console.log(ajax.responseText);
+            // 将数据让外面可以使用
+            // return ajax.responseText;
+            // 当onreadystatechange被调用时，证明数据请求成功
+            // ajax.responseText;
+            // 可外面传入一个 function 作为参数 success
+            success(ajax.responseText);
+        }
+    }
+}
+```
+
+Promise版本的ajax请求：
+
+```js
+var getJSON = function(url) {
+    var promise = new Promise(function(resolve, reject) {
+        var client = new XMLHttpRequest();
+        client.open("GET", url);
+        client.onreadystatechange = handler;
+        client.responseType = "json";
+        client.setRequestHeader("Accept", "application/json");
+        client.send();
+    
+        function handler() {
+            if (this.readyState !== 4) {
+                return;      
+            }
+            if (this.status === 200) {
+                resolve(this.response);      
+            } else {
+                reject(new Error(this.statusText));      
+            }    
+        };  
+    });
+    return promise;
+};  
+  
+getJSON("http://rap.taobao.org/mockjs/9768/Rap/get").then(function(response) {
+    console.log('Contents: ',response);
+}, function(error) {
+    console.error('出错了', error);
+});
+```
+
+----
+
+## 3.5 请问ajax、axios、fetch请求有何区别？
+
+- **axios**
+
+**一个基于Promise 用于浏览器和 nodejs 的 HTTP 客户端**，本质上也是对原生XMLHTTPRequest对象的封装，只不过它是Promise的实现版本，符合最新的ES规范，具有以下特征：
+
+a、从浏览器中创建 XMLHttpRequest
+
+b、支持 Promise API
+
+c、客户端防止CSRF
+
+d、提供了一些并发请求的接口（实际开发中方便了很多的操作）
+
+e、从 node.js 创建 http 请求
+
+f、拦截请求和响应
+
+g、转换请求和响应数据
+
+h、支持取消请求
+
+i、自动转换JSON数据
+
+- **fetch**
+
+号称是ajax替代品，在ES6时产生，是基于promise设计的。相比ajax，**fetch代码结构更加简单，参数类型与ajax类似**，但fetch不是ajax的进一步封装，而是原生js，没有使用XMLHttpRequest对象
+
+**fetch优点：**
+
+a、符合关注分离，没有将输入、输出和用事件来跟踪的状态混杂在一个对象里
+
+b、写法更加简洁方便
+
+---
