--- a/面试学习题目/前端面试_9_计算机网络部分.md
+++ b/面试学习题目/前端面试_9_计算机网络部分.md
@@ -1,255 +1,8 @@
-## 网络传输
+
+
+
 
 ---
-
-#### 5.1 跨域是什么？如何解决跨域？
-
-**参考答案**：
-
-1.什么是同源策略及其限制内容？
-
-**同源策略**是一种约定，它是浏览器最核心也最基本的安全功能，如果缺少了同源策略，浏览器很容易受到XSS、CSRF等攻击。
-
-**所谓同源是指"协议+域名+端口"三者相同**，即便两个不同的域名指向同一个ip地址，也非同源。
-
-![同源策略及其限制内容](E:\pogject\学习笔记\image\js\同源策略及其限制内容.png)
-
-**同源策略限制内容有：**
-
-- Cookie、LocalStorage、IndexedDB 等存储性内容
-- DOM 节点
-- AJAX 请求发送后，结果被浏览器拦截了
-
-但是有三个标签是允许跨域加载资源：
-
-- <img src='xxx'>
-
-- <link href='xxx'>
-
-- <script src='xxx'>
-
-> 跨域并不是请求发不出去，请求能发出去，服务端能收到请求并正常返回结果，**只是结果被浏览器拦截了**。
-
-1. 跨域解决方案
-
-   解决方案有jsonp、cors、postMessage、websocket、Node中间件代理(两次跨域)、nginx反向代理、window.name + iframe、location.hash + iframe、document.domain + iframe，CORS支持所有类型的HTTP请求，是跨域HTTP请求的根本解决方案，JSONP只支持GET请求，JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据。不管是Node中间件代理还是nginx反向代理，主要是通过同源策略对服务器不加限制。**日常工作中，用得比较多的跨域方案是cors和nginx反向代理**
-
-**解析**：
-
-1.jsonp
-
-(1) JSONP原理
-
-利用<script>标签没有跨域限制的漏洞，网页可以得到从其他来源动态产生的 JSON 数据。**JSONP请求一定 需要对方的服务器做支持才可以。**
-
-(2) JSONP优缺点
-
-JSONP**优点**是简单兼容性好，可用于解决主流浏览器的跨域数据访问的问题。**缺点**是仅支持get方法具有局限性, 不安全可能会遭受XSS攻击。
-
-(3) JSONP的实现流程
-
-- 声明一个回调函数，其函数名(如show)当做参数值，要传递给跨域请求数据的服务器，**函数形参为要获取目 标数据**(服务器返回的data)。
-- 创建一个``标签，把那个跨域的API数据接口地址，赋值给script的src,还要在这个地址中向服务器传递该函数 名（可以通过问号传参:?callback=show）。
-- 服务器接收到请求后，需要进行特殊的处理：把传递进来的函数名和它需要给你的数据拼接成一个字符串,例 如：传递进去的函数名是show，它准备好的数据是show('我不爱你')。
-- 最后服务器把准备的数据通过HTTP协议返回给客户端，客户端再调用执行之前声明的回调函数（show），对 返回的数据进行操作。
-
-2. cors
-
-CORS 需要浏览器和后端同时支持。IE 8 和 9 需要通过 XDomainRequest 来实现。
-
-浏览器会自动进行 CORS 通信，实现 CORS 通信的关键是后端。**只要后端实现了 CORS，就实现了跨域。**
-
-服务端设置 Access-Control-Allow-Origin 就可以开启 CORS。 该属性表示哪些域名可以访问资源，如果设置通配符则表示所有网站都可以访问资源。
-
-3. postMessage
-
-postMessage是HTML5 XMLHttpRequest Level 2中的API，**且是为数不多可以跨域操作的window属性之一**，它可用于解决以下方面的问题：
-
-- 页面和其打开的新窗口的数据传递
-- 多窗口之间消息传递
-- 页面与嵌套的iframe消息传递
-- 上面三个场景的跨域数据传递
-
-**postMessage()方法允许来自不同源的脚本采用异步方式进行有限的通信，可以实现跨文本档、多窗口、跨域消息传递**。
-
-4. websocket
-
-Websocket是HTML5的一个持久化的协议，它实现了浏览器与服务器的全双工通信，同时也是跨域的一种解决方案。WebSocket和HTTP都是应用层协议，都基于 TCP 协议。但是 **WebSocket 是一种双向通信协议，在建立连接之后，WebSocket 的 server 与 client 都能主动向对方发送或接收数据**。同时，WebSocket 在建立连接时需要借助 HTTP 协议，连接建立好了之后 client 与 server 之间的双向通信就与 HTTP 无关了。
-
-原生WebSocket API使用起来不太方便，我们使用Socket.io，它很好地封装了webSocket接口，提供了更简单、灵活的接口，也对不支持webSocket的浏览器提供了向下兼容
-
-5. Node中间件代理(两次跨域)
-
-实现原理：**同源策略是浏览器需要遵循的标准，而如果是服务器向服务器请求就无需遵循同源策略。** 代理服务器，需要做以下几个步骤：
-
-- 接受客户端请求 。
-- 将请求 转发给服务器。
-- 拿到服务器 响应 数据。
-- 将 响应 转发给客户端。
-
-6. nginx反向代理
-
-实现原理类似于Node中间件代理，**需要你搭建一个中转nginx服务器，用于转发请求。**
-
-使用nginx反向代理实现跨域，**是最简单的跨域方**式。只需要修改nginx的配置即可解决跨域问题，支持所有浏览器，支持session，不需要修改任何代码，并且不会影响服务器性能。
-
-实现思路：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录。
-
-7. window.name + iframe
-
-window.name属性的独特之处：name值在不同的页面（甚至不同域名）加载后依旧存在，并且可以支持非常长的 name 值（2MB）。
-
-总结：通过iframe的src属性由外域转向本地域，跨域数据即由iframe的window.name从外域传递到本地域。这个就巧妙地绕过了浏览器的跨域访问限制，但同时它又是安全操作。
-
-8. location.hash + iframe
-
-实现原理： a.html欲与c.html跨域相互通信，通过中间页b.html来实现。 三个页面，不同域之间利用iframe的location.hash传值，相同域之间直接js访问来通信。
-
-具体实现步骤：一开始a.html给c.html传一个hash值，然后c.html收到hash值后，再把hash值传递给b.html，最后b.html将结果放到a.html的hash值中。 同样的，a.html和b.html是同域的，都是http://localhost:3000;而c.html是http://localhost:4000
-
-9. document.domain + iframe
-
-**该方式只能用于二级域名相同的情况下，比如a.test.com和b.test.com适用于该方式**。 只需要给页面添加document.domain ='test.com'表示二级域名都相同就可以实现跨域。
-
-实现原理：两个页面都通过js强制设置document.domain为基础主域，就实现了同域。
-
-------
-
-#### 5.2 jsonp原理
-
-**参考答案**：
-
-利用<script>标签没有跨域限制的漏洞，网页可以得到从其他来源动态产生的 JSON 数据。JSONP请求一定 需要对方的服务器做支持才可以。
-
-**解析**：
-
-1. JSONP和AJAX对比
-
-   JSONP和AJAX相同，都是客户端向服务器端发送请求，从服务器端获取数据的方式。**但AJAX属于同源策略**，JSONP属于非同源策略（跨域请求）
-
-2. JSONP优缺点
-
-   JSONP优点是简单兼容性好，可用于解决主流浏览器的跨域数据访问的问题。**缺点是仅支持get方法具有局限性,不安全可能会遭受XSS攻击。**
-
-3. JSONP的实现流程
-
-- 声明一个回调函数，其函数名(如show)当做参数值，要传递给跨域请求数据的服务器，函数形参为要获取目标数据(服务器返回的data)。
-
-- 创建一个``标签，把那个跨域的API数据接口地址，赋值给script的src,还要在这个地址中向服务器传递该函数名（可以通过问号传参:?callback=show）。
-
-- 服务器接收到请求后，需要进行特殊的处理：把传递进来的函数名和它需要给你的数据拼接成一个字符串,例如：传递进去的函数名是show，它准备好的数据是show('我不爱你')。
-
-- 最后服务器把准备的数据通过HTTP协议返回给客户端，客户端再调用执行之前声明的回调函数（show），对返回的数据进行操作。
-
-  在开发中可能会遇到多个 JSONP 请求的回调函数名是相同的，这时候就需要自己封装一个 JSONP函数。
-
-```js
-// index.html
-  function jsonp({url, params, callback}){
-    return new Promise((resolve, reject) => {
-      let script = document.createElement("script");
-      window[callback] = function(data) {
-        resolve(data);
-        document.body.removeChild(script);
-      }
-      params = {...params, callback};
-      let arrs = [];
-      for (let key in params) {
-        arrs.push(`${key}=${params[key]}`);
-      }
-      script.src = `${url}?${arrs.join("&")}`;
-      document.body.appendChild(script);
-    });
-  }
-
-  jsonp({
-    url: "http://localhost:3000/say",
-    params: {wd: "kop"},
-    callback: "show"
-  }).then(data => {
-    console.log(data);
-  });
-```
-
-上面这段代码相当于向http://localhost:3000/say?wd=kop&callback=show这个地址请求数据，然后后台返回show('我不爱你')，最后会运行show()这个函数，打印出'我不爱你'
-
-```js
-// server.js
-
-const fs=require("fs");
-const express=require("express");
-
-let app = express();
-
-
-app.get('/say', function(req, res) {
-	let {wd, callback} = req.query;
-	console.log(wd);
-	console.log(callback);
-	res.end(`${callback}("YNWA!")`);
-});
-
-app.listen(3000);
-```
-
-1. jQuery的jsonp形式
-
-   **JSONP都是GET和异步请求的，不存在其他的请求方式和同步请求，且jQuery默认就会给JSONP的请求清除缓存。**
-
-```js
-$.ajax({
-    url:"http://crossdomain.com/jsonServerResponse",
-    dataType:"jsonp",
-    type:"get",//可以省略
-    jsonpCallback:"show",//->自定义传递给服务器的函数名，而不是使用jQuery自动生成的，可省略
-    jsonp:"callback",//->把传递函数名的那个形参callback，可省略
-    success:function (data){
-    console.log(data);}
-});
-```
-
----
-
-#### 5.3 解决跨域问题，websocket的原理
-
-**参考答案**：
-
-Websocket是HTML5的一个持久化的协议，它实现了浏览器与服务器的全双工通信，同时也是跨域的一种解决方案。WebSocket和HTTP都是应用层协议，都基于 TCP 协议。但是 **WebSocket 是一种双向通信协议，在建立连接之后，WebSocket 的 server 与 client 都能主动向对方发送或接收数据**。同时，WebSocket 在建立连接时需要借助 HTTP 协议，连接建立好了之后 client 与 server 之间的双向通信就与 HTTP 无关了。
-
-原生WebSocket API使用起来不太方便，我们使用Socket.io，它很好地封装了webSocket接口，提供了更简单、灵活的接口，也对不支持webSocket的浏览器提供了向下兼容。
-
-我们先来看个例子：本地文件socket.html向localhost:3000发生数据和接受数据
-
-```html
-// socket.html
-<script type="text/javascript">
-  let socket = new WebSocket("ws://localhost:3000");
-  socket.onopen = function() {
-    socket.send("kop");  //向服务器发送数据
-  }
-  socket.onmessage = function(e) {
-    console.log(e.data);  //接收服务器返回的数据
-  }
-</script>
-```
-
-```js
-// server.js
-
-const fs=require("fs");
-const express=require("express");
-const WebSocket = require("ws");
-
-let wss = new WebSocket.Server({port: 3000});
-
-wss.on("connection", (ws) => {
-	ws.on("message", (data) => {
-		console.log(data.toString());
-		ws.send("YNWA!");
-	});
-});
-
-```
 
 ---
 
@@ -593,25 +346,7 @@ Ajax的工作原理相当于在用户和服务器之间加了—个**中间层**
 
 ---
 
-#### 5.13 什么是同源策略,为什么需要同源策略
-
-**参考答案**：
-
-**同源策略**：
-
-同源策略(Same Origin Policy)是一种约定，它是浏览器最核心最基本的安全功能。所谓的同源是指域名、协议、端口相同。不同源的客户端脚本在没有明确授权的情况下是不允许读写其他网站的资源
-
-**同源策略的限制**:
-
-1. Cookie、LocalStorage 和 IndexDB 无法读取。
-2. DOM 无法获得。
-3. AJAX 请求不能发送。
-
-**同源策略作用**:
-
-1. 防止恶意网页可以获取其他网站的本地数据。
-2. 防止恶意网站iframe其他网站的时候，获取数据。
-3. 防止恶意网站在自已网站有访问其他网站的权利，以免通过cookie免登，拿到数据。
+3. 
 
 ---
 
@@ -2026,3 +1761,302 @@ Expires 设置时间点
 9. HEAD　　和 GET 方法类似，但只返回报文首部，不返回报文实体主体部分.
 
 -----------------------------------
+
+---
+
+## 1.1 请问你了解OSI七层模型吗？
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633686837830/D6A70DA7466DF3865BABC8FDAA316E4C)
+
+- **应用层**
+
+    OSI参考模型中最靠近用户的一层，是**为计算机用户提供应用接口，也为用户直接提供各种网络服务**。我们常见应用层的网络服务协议有：**HTTP，HTTPS，FTP，POP3、SMTP等。**
+
+- **表示层**
+
+    **表示层提供各种用于应用层数据的编码和转换功能**,确保一个系统的应用层发送的数据能被另一个系统的应用层识别。如果必要，该层可提供一种标准表示形式，用于将计算机内部的多种数据格式转换成通信中采用的标准表示形式。数据压缩和加密也是表示层可提供的转换功能之一。
+
+- **会话层**
+
+    会话层就是**负责建立、管理和终止表示层实体之间的通信会话**。该层的通信由不同设备中的应用程序之间的服务请求和响应组成。
+
+- **传输层**
+
+    传输层建立了主机端到端的链接，传输层的作用是**为上层协议提供端到端的可靠和透明的数据传输服务**，包括处理差错控制和流量控制等问题。该层向高层屏蔽了下层数据通信的细节，使高层用户看到的只是在两个传输实体间的一条主机到主机的、可由用户控制和设定的、可靠的数据通路。我们通常说的，**TCP UDP就是在这一层。端口号既是这里的“端”。**
+
+- **网络层**
+
+    本层**通过IP寻址来建立两个节点之间的连接**，为源端的运输层送来的分组，选择合适的路由和交换节点，正确无误地按照地址传送给目的端的运输层。就是通常说的**IP层**。这一层就是我们经常说的IP协议层。IP协议是Internet的基础。
+
+- **数据链路层** 
+
+    将比特组合成字节,再将字节组合成帧,使用链路层地址 (以太网使用MAC地址)来访问介质,并进行差错检测。
+
+   数据链路层又分为2个子层：**逻辑链路控制**子层（LLC）和**媒体访问控制**子层（MAC）。
+
+    MAC子层处理CSMA/CD算法、数据出错校验、成帧等；LLC子层定义了一些字段使上次协议能共享数据链路层。 在实际使用中，LLC子层并非必需的。
+
+- **物理层**   
+
+    **实际最终信号的传输是通过物理层实现的**。通过物理介质传输比特流。规定了电平、速度和电缆针脚。常用设备有（各种物理设备）集线器、中继器、调制解调器、网线、双绞线、同轴电缆。这些都是物理层的传输介质。
+
+---
+
+## 1.2 请问你了解TCP/IP五层协议吗？它与OSI七层模型有什么关系吗？
+
+**TCP/IP协议**包含四个概念层，其中有三层对应于OSI模型中的相应层，TCP/IP协议族并不包含物理层和数据链路层，因此它不能独立完成整个计算机网络系统的功能，必须与许多其他的协议协同工作。
+
+- **网络接口层**
+
+用于协作IP数据在已有网络介质上传输的协议。实际上TCP/IP标准并不定义与ISO数据链路层和物理层相对应的功能。相反，它定义像**地址解析协议**(Address Resolution Protocol,ARP)这样的协议，**提供TCP/IP协议的数据结构和实际物理硬件之间的接口。**
+
+- **网络层**
+
+对应于OSI七层模型的网络层。本层包含IP协议、RIP协议(Routing Information Protocol，路由信息协议)，负责数据的包装、寻址和路由。同时还包含网间控制报文协议(Internet Control Message Protocol,ICMP)用来提供网络诊断信息。
+
+- **传输层**
+
+对应于OSI七层模型的传输层，它提供两种端到端的通信服务。其中TCP协议(Transmission Control Protocol)提供可靠的数据流运输服务，UDP协议(Use Datagram Protocol)提供不可靠的用户数据报服务。
+
+- **应用层**
+
+对应于OSI七层模型的**应用层、表达层与会话层**。因特网的应用层协议包括Finger、Whois、FTP(文件传输协议)、Gopher、HTTP(超文本传输协议)、Telent(远程终端协议)、SMTP(简单邮件传送协议)、IRC(因特网中继会话)、NNTP（网络新闻传输协议）等。
+
+TCP/IP五层协议与OSI的七层模型对应关系如下：
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633686981137/E3C7704B2554F5FA5553E2FF7A4E7F55)
+
+----
+
+## 1.3 请问你能阐述下TCP与UDP的区别吗？
+
+TCP和UDP是OSI模型中的运输层中的协议。TCP提供可靠的通信传输，而UDP则常被用于让广播和细节控制交给应用的通信传输。
+
+TCP：
+
+充分实现了数据传输时各种控制功能，**可以进行丢包的重发控制，还可以对次序乱掉的分包进行顺序控制**。而这些在UDP都没有。此外，TCP作为一种面向有连接的协议，只有在确认通信对端存在时才会发送数据，从而可以控制通信流量的浪费。
+
+TCP通过**检验和**、**序列号**、**确认应答**、**重发控制**、**连接管理**以及**窗口控制**等机制实现可靠性传输。
+
+UDP：
+
+不提供复杂的控制机制，利用IP提供面向无连接的通信服务。并且它是将应用程序发来的数据在收到的那一刻，立刻按照原样发送到网络上的一种机制。
+
+即使是出现网络拥堵的情况下，UDP也无法进行流量控制等避免网络拥塞的行为。此外，传输途中如果出现了丢包，UDP也不负责重发。
+
+TCP与UDP区别：
+
+1、TCP面向连接（如打电话要先拨号建立连接），UDP是**无连接**的，即发送数据之前不需要建立连接
+
+2、TCP提供可靠的服务。通过TCP连接传送的数据，无差错，不丢失，不重复，且按序到达，**UDP尽最大努力交付**，即不保证可靠交付
+
+3、TCP面向**字节流**，实际上是TCP把数据看成一连串无结构的字节流；UDP是面向**报文**的，UDP没有拥塞控制，**因此网络出现拥塞不会使源主机的发送速率降低（对实时应用很有用，如IP电话，实时视频会议等）**
+
+4、每一条TCP连接只能是**点到点的**；UDP支持一对一，一对多，多对一和多对多的交互通信
+
+5、TCP首部开销**20字节**；UDP的首部开销小，只有**8个字节**
+
+6、TCP的逻辑通信信道是**全双工的可靠信道**，UDP则是不可靠信道
+
+---
+
+## 1.4 请问你能阐述下TCP三次握手与四次挥手的过程吗？
+
+TCP的三次握手与四次挥手的过程可参考以下图例加以理解：
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633687013651/32F84793188E87383042FB2218BE6D50)
+
+TCP三次握手：
+
+1、**客户端发送SYN包来建立连接**。包信息: [SYN=1,ACK=0] Seq=1000(随机生成的初始序号client_isn,目前假设1000)；Len=0；MSS=1460(通常情况下是1460)；
+
+2、**服务端收到包之后，提取SYN的报文信息，然后分配TCP缓存和变量，发送允许连接的报文段。**包信息 [SYN=1,ACK=1] Seq=666(随机生成的初始序号server_isn,目前假设666); Ack=1000(上一个包的Seq)+1;Len=0;MSS=1200(这个不是固定的，根据当前窗口来判断能接受的最大报文段长度**)在第三次握手之前分配缓存容易收到SYN洪泛的拒绝服务攻击**
+
+3、客户端接受到服务端的确认包之后，发送确认包[ACK=1,SYN=0] Seq=1001(上一个包的Ack), Ack=666(上一个包的Seq)+1;之后就可以正常通信了。前两次不能有效负载，第三次就可以携带客户数据了，后面在通信的时候标志位都将置为0
+
+TCP四次挥手：
+
+1、客户端给服务器发送TCP包，用来关闭客户端到服务器的数据传送。将标志位FIN\=1 表示请求断开连接，同时把Seq = u
+
+2、服务器收到FIN后,先检验Ack \=u+1，发回一个ACK = 1(标志位ACK=1)表示确认断开连接请求，同时把Seq = v ,服务器开始断开工作
+
+3、服务器断开工作完成，发送一个FIN \= 1请求断开连接，ACK=1 (标志位ACK=1)表示确认断开连接请求, 同时把Seq =w
+
+4、客户端收到服务器发送的FIN\=1之后，发回ACK=1(标志位ACK=1)确认关闭请求，同时把Ack= w+1 服务器在检验Ack\= 服务器Seq+1之后关闭连接，客户端在等待2msl时间后关闭连接
+
+注意：为什么建立连接只要三次握手，但是断开连接要四次挥手？
+
+**因为**三次握手的第二次由服务器发送**SYN建立连接的信息**和**ACK确认建立连接的信息**是在同**一个报文中**传输的，而四次挥手的由服务器发送的**ACK 确认断开请求的信息**和**FIN 发送断开连接的信息**是在**两个报文中**传输的
+
+
+
+
+
+---
+
+## 1.5 请问在浏览器中输入[www.baidu.com](http://www.baidu.com/)后执行了哪些过程？
+
+- 客户端浏览器通过DNS解析到[www.baidu.com](http://www.baidu.com/)的IP地址220.181.27.48，**通过这个IP地址找到客户端到服务器的路径**。客户端浏览器发起一个HTTP会话到220.161.27.48，然后通过TCP进行封装数据包，输入到网络层。
+- **在客户端的传输层，把HTTP会话请求分成报文段，添加源和目的端口**，如服务器使用80端口监听客户端的请求，客户端由系统随机选择一个端口如5000，与服务器进行交换，服务器把相应的请求返回给客户端的5000端口。然后使用IP层的IP地址查找目的端。
+- 客户端的网络层不用关系应用层或者传输层的东西，主要做的是通过查找路由表确定如何到达服务器，期间可能经过多个路由器，这些都是由路由器来完成的工作，不作过多的描述，**无非就是通过查找路由表决定通过那个路径到达服务器**。
+- 客户端的链路层，包通过链路层发送到路由器，**通过邻居协议查找给定IP地址的MAC地址，然后发送ARP请求查找目的地址**，如果得到回应后就可以使用ARP的请求应答交换的IP数据包现在就可以传输了，然后发送IP数据包到达服务器的地址。
+
+---
+
+## 1.6 请问TCP如何保证数据的可靠传输的呢？
+
+TCP提供一种面向连接的、可靠的字节流服务。其中，**面向连接**意味着两个使用TCP的应用（通常是一个客户和一个服务器）在彼此交换数据之前必须先建立一个TCP连接。在一个TCP连接中，仅有两方进行彼此通信；而**字节流服务**意味着两个应用程序通过TCP链接交换8bit字节构成的字节流，**TCP不在字节流中插入记录标识符。**
+
+TCP通过以下方式保证数据传输的可靠性：
+
+**数据包校验**：目的是检测数据在传输过程中的任何变化，若校验出包有错，则丢弃报文段并且不给出响应，这时TCP发送数据端超时后会重发数据
+
+**对失序数据包重排序**：既然TCP报文段作为IP数据包来传输，而IP数据包的到达可能会失序，因此TCP报文段的到达也可能会失序。TCP将对失序数据进行重新排序，然后才交给应用层
+
+**丢弃重复数据**：对于重复数据，能够丢弃重复数据
+
+**应答机制**：当TCP收到发自TCP连接另一端的数据，**它将发送一个确认**。这个确认不是立即发送，通常将推迟几分之一秒
+
+**超时重发**：当TCP发出一个段后，它启动一个定时器，等待目的端确认收到这个报文段。**如果不能及时收到一个确认，将重发这个报文段**
+
+**流量控制**：TCP连接的每一方都有固定大小的缓冲空间。**TCP的接收端只允许另一端发送接收端缓冲区所能接纳的数据**，这可以防止较快主机致使较慢主机的缓冲区溢出，这就是流量控制。TCP使用的**流量控制协议**是**可变大小的滑动窗口协议**
+
+----
+
+## 1.7 请问TCP如何拥塞控制呢？
+
+**防止过多的数据注入到网络中，这样可以使网络中的路由器或链路不致过载**。拥塞控制所要做的都有一个**前提**：网络能够承受现有的网络负荷。拥塞控制是一个全局性的过程，涉及到所有的主机、路由器，以及与降低网络传输性能有关的所有因素。
+
+拥塞控制代价：**需要获得网络内部流量分布的信息**。在实施拥塞控制之前，还需要在结点之间交换信息和各种命令，以便选择控制的策略和实施控制。**这样就产生了额外的开销**。拥塞控制还需要将一些资源分配给各个用户单独使用，**使得网络资源不能更好地实现共享**。
+
+几种常见**拥塞控制方法**：
+
+慢开始(slow-start )、拥塞避免(congestion avoidance )、快重传( fastretransmit )和快恢复( fastrecovery )。
+
+
+
+---
+
+## 2.1 请问你了解超文本传送协议HTTP吗？
+
+HTTP是一个属于**应用层**的面向对象的协议，由于其简捷、快速的方式，适用于分布式超媒体信息系统。HTTP协议的主要特点可概括如下：
+
+- **支持客户/服务器模式**。
+- **简单快速**：客户向服务器请求服务时，只需传送请求方法和路径。请求方法常用的有GET、HEAD、POST。每种方法规定了客户与服务器联系的类型不同。由于HTTP协议简单，使得HTTP服务器的程序规模小，因而通信速度很快。
+- **灵活**：HTTP允许传输任意类型的数据对象。正在传输的类型由Content-Type加以标记。
+- **无连接**：无连接的**含义是限制每次连接只处理一个请求**。服务器处理完客户的请求，并收到客户的应答后，即断开连接。采用这种方式可以节省传输时间。
+- **无状态**：HTTP协议是无状态协议。无状态是**指协议对于事务处理没有记忆能力**。缺少状态意味着如果后续处理需要前面的信息，则它必须重传，这样可能导致每次连接传送的数据量增大。**另一方面，在服务器不需要先前信息时它的应答就较快。**
+
+---
+
+## 2.2 请问HTTP和HTTPS两者有哪些区别？
+
+HTTP协议是超文本传输协议，HTTPS是安全的超文本传输协议，是安全版的HTTP协议，使用**安全套接字层(SSL)**进行信息交换，
+
+HTTPS协议主要针对解决**HTTP协议以下不足**：
+
+1、通信使用明文（不加密），内容可能会被窃听
+
+  2、不验证通信方身份，应此可能遭遇伪装
+
+3、无法证明报文的完整性（即准确性），所以可能已遭篡改
+
+  HTTP+加密+认证+完整性保护=HTTPS，HTTP端口 80， HTTPS端口**443**
+
+  HTTPS采用**对称加密**、SSL位于应用层与传输层TCP之间，原本数据由应用层直接交由传输层处理，**现在会经过SSL加密再进行传输**。
+
+注意：HTTPS也不是绝对安全的，针对SSL的中间人攻击方式主要有两类，分别是**SSL劫持攻击**和**SSL剥离攻击**。
+
+SSL劫持攻击就是 SSL证书欺骗攻击，将自己接入到客户端和目标网站之间； 在传输过程中伪造服务器的证书，将服务器的公钥替换成自己的公钥。
+
+---
+
+## 2.3 请问对称加密与非对称加密有什么区别？
+
+**对称密钥加密**是指加密和解密使用同一个密钥的方式，这种方式存在的**最大问题就是密钥发送问题**，即如何安全地将密钥发给对方；
+
+而**非对称加密**是指使用一对非对称密钥，即公钥和私钥，**公钥**可以随意发布，但**私钥**只有自己知道。发送密文的一方使用对方的公钥进行加密处理，对方接收到加密信息后，使用自己的私钥进行解密。
+
+由于非对称加密的方式不需要发送用来解密的私钥，所以可以保证安全性；但是和对称加密比起来，**它非常的慢**，所以我们还是要用对称加密来传送消息，但对**称加密所使用的密钥我们可以通过非对称加密的方式发送出去。**
+
+---
+
+## 2.4请问HTTP的请求和响应由哪几个部分组成？
+
+- HTTP**请求信息**由3部分组成：
+
+1、请求方法（GET/POST）、URI、协议/版本
+
+2、请求头(Request Header)：Content-Type、端口号Host、Cookie
+
+3、请求正文：包含客户提交的查询字符串信息，请求头和请求正文之间是一个空行
+
+- **HTTP响应**也由3个部分构成：
+
+1、状态行：状态代码及描述 如404、500等
+
+2、响应头(Response Header)：Content-Type 、Server、Date
+
+3、响应正文：html代码
+
+----
+
+## 2.5 请问IP地址分为哪几类？
+
+IP地址是指互联网协议地址，是IP协议提供的一种统一的地址格式，它为互联网上的每一个网络和每一台主机分配一个逻辑地址，以此来屏蔽物理地址的差异。IP地址编址方案将IP地址空间划分为A、B、C、D、E五类，其中**A、B、C是基本类**，D、E类作为多播和保留使用，为特殊地址。
+
+每个IP地址包括两个标识码（ID），即**网络ID和主机ID**。同一个物理网络上的所有主机都使用同一个网络ID，网络上的一个主机（包括网络上工作站，服务器和路由器等）有一个主机ID与其对应。A~E类地址的特点如下：
+
+**A类地址：**以0开头，第一个字节范围：0~127；
+
+**B类地址：**以10开头，第一个字节范围：128~191；
+
+**C类地址：**以110开头，第一个字节范围：192~223；
+
+**D类地址：**以1110开头，第一个字节范围为224~239；
+
+**E类地址：**以1111开头，保留地址
+
+**（1）、A类地址：1字节的网络地址 + 3字节主机地址，网络地址的最高位必须是“0”**
+
+一个A类IP地址是指， 在IP地址的四段号码中，第一段号码为网络号码，剩下的三段号码为本地计算机的号码。如果用二进制表示IP地址的话，A类IP地址就由1字节的网络地址和3字节主机地址组成，网络地址的最高位必须是“0”。A类IP地址中网络的标识长度为8位，主机标识的长度为24位，A类网络地址数量较少，有126个网络，每个网络可以容纳主机数达1600多万台。
+
+A类IP地址的地址范围1.0.0.0到127.255.255.255（二进制表示为：00000001 00000000 00000000 00000000 - 01111110 11111111 11111111 11111111），最后一个是广播地址。A类IP地址的子网掩码为255.0.0.0，每个网络支持的最大主机数为256的3次方-2=16777214台。
+
+**（2）、B类地址: 2字节的网络地址 + 2字节主机地址，网络地址的最高位必须是“10”**
+
+一个B类IP地址是指，在IP地址的四段号码中，前两段号码为网络号码。如果用二进制表示IP地址的话，B类IP地址就由2字节的网络地址和2字节主机地址组成，网络地址的最高位必须是“10”。B类IP地址中网络的标识长度为16位，主机标识的长度为16位，B类网络地址适用于中等规模的网络，有16384个网络，每个网络所能容纳的计算机数为6万多台。
+
+B类IP地址地址范围128.0.0.0-191.255.255.255（二进制表示为：10000000 00000000 00000000 00000000—-10111111 11111111 11111111 11111111），最后一个是广播地址。B类IP地址的子网掩码为255.255.0.0，每个网络支持的最大主机数为256的2次方-2=65534台。
+
+**（3）、C类地址: 3字节的网络地址 + 1字节主机地址，网络地址的最高位必须是“110”**
+
+一个C类IP地址是指，在IP地址的四段号码中，前三段号码为网络号码，剩下的一段号码为本地计算机的号码。如果用二进制表示IP地址的话，C类IP地址就由3字节的网络地址和1字节主机地址组成，网络地址的最高位必须是“110”。C类IP地址中网络的标识长度为24位，主机标识的长度为8位，C类网络地址数量较多，有209万余个网络。适用于小规模的局域网络，每个网络最多只能包含254台计算机。
+
+C类IP地址范围192.0.0.0-223.255.255.255（二进制表示为: 11000000 00000000 00000000 00000000 - 11011111 11111111 11111111 11111111）。C类IP地址的子网掩码为255.255.255.0，每个网络支持的最大主机数为256-2=254台。
+
+**（4）、D类地址:多播地址，用于1对多通信，最高位必须是“1110”**
+
+D类IP地址在历史上被叫做多播地址(multicast address)，即组播地址。在以太网中，多播地址命名了一组应该在这个网络中应用接收到一个分组的站点。多播地址的最高位必须是“1110”，范围从224.0.0.0到239.255.255.255。
+
+**（5）、E类地址:为保留地址，最高位必须是“1111”**
+
+----
+
+## 2.6 请简介ARP的工作原理。
+
+ARP是**地址解析协议**，其工作原理为：
+
+（1）、首先，每个主机都会在自己的ARP缓冲区中建立一个ARP列表，以表示IP地址和MAC地址之间的对应关系；
+
+（2）、当源主机要发送数据时，**首先检查ARP列表中是否有对应IP地址的目的主机的MAC地址**，如果有，则直接发送数据，如果没有，就向本网段的所有主机发送ARP数据包，该数据包包括的内容有：源主机IP地址，源主机MAC地址，目的主机的IP地址；
+
+（3）、**当本网络的所有主机收到该ARP数据包时，首先检查数据包中的IP地址是否是自己的IP地址**，如果不是，则忽略该数据包，如果是，则首先从数据包中取出源主机的IP和MAC地址写入到ARP列表中，如果已经存在，则覆盖，然后将自己的MAC地址写入ARP响应包中，告诉源主机自己是它想要找的MAC地址；
+
+（4）、源主机收到ARP响应包后。将目的主机的IP和MAC地址写入ARP列表，并利用此信息发送数据。如果源主机一直没有收到ARP响应数据包，表示ARP查询失败。
+
+---
+
+
+
+---
