--- a/面试学习题目/前端面试_4_ES6部分.md
+++ b/面试学习题目/前端面试_4_ES6部分.md
@@ -380,3 +380,1322 @@ console.log(arr2); //[0, [100,11,111], 2]
 针对 ES6 的兼容性问题，很多团队为此开发出了多种语法解析转换工具，把我们写的 ES6 语法转换成 ES5，相当于在 ES6 和浏览器之间做了一个翻译官。比较通用的工具方案有 babel，jsx，traceur，es6-shim 等。
 
 ------
+
+---
+
+## 1.1 请问什么是ES6，它有哪些新特性？
+
+ECMAScript规定了浏览器脚本语言（js）的标准，ES6是一个泛指，包含ES5.1版以后的js的下一代标准，涵盖了ES2015、ES2016、ES2017等，（ES2015/2016/2017是正式名称，特指发布的正式版本语言标准的年份），通常提到的ES6一般指ES2015标准，有时也泛指“下一代js语言”
+
+ES6相对于更加简洁，大幅度提高了开发效率，主要新增了以下特性：
+
+（1）let声明变量、const声明常量
+
+（2）箭头函数
+
+（3）解构赋值变量（数组、变量）
+
+```js
+let [a, b, c] = [1, 2, 3];
+let[a,[[b], c]]=[1,[[2],3]]; //a：1 b：2 c：3
+```
+
+（4）Set、Map数据结构
+
+（5）Symbol数据类型
+
+（6）Promise对象
+
+（7）async、await
+
+（8）class类
+
+（9）ES 模块化（Moudule）
+
+（10）函数默认参数
+
+（11）函数的rest参数（...变量名），用于获取函数的多余参数，就不需要用arguments对象
+
+```js
+function add(...values){
+    let sum = 0;
+    for(var val of values){     
+        sum += val;
+    }
+    return sum;
+}
+add(2,5,3)  //10
+```
+
+（12）模板字符串
+
+（13）… 展开运算（延展操作符）
+
+（14）元编程Proxy、Reflet
+
+（15）迭代器Iterator 和 for...of 
+
+（16）新增了一些Object对象方法
+
+----
+
+## 1.2 请问var、let 和 const 有何区别？
+
+**作用域不同**：
+
+var 声明的变量的作用域是当前执行上下文，或者说对于声明在任何函数外的变量来说是全局的
+
+let 、 const 声明的是块级作用域变量，只在它所在的代码块内有效
+
+**变量提升现象**：
+
+var声明的变量会被**提升到作用域顶部**，并初始化为undefined
+
+let、 const 声明的变量**会被提升到顶部，但在声明代码前不能使用**（暂时性死区），会被初始化undefined
+
+**变量/常量**：
+
+var 和 let 声明变量，const 声明只读常量
+
+**暂时性死区**：
+
+var 可以先使用，后声明，值为undefined
+
+let 、const 必须先声明，后使用；**且const必须初始化赋值**
+
+在let、const声明之前就访问对应的变量与常量，会抛出ReferenceError，产生**原因**：
+
+由let/const声明的变量，当它们包含的词法环境(Lexical Environment)被实例化时会被创建，**但只有在变量的词法绑定(LexicalBinding)已经被求值运算后，才能够被访问**（摘自ES2015语言标准）
+
+简单来说：用let/const声明的变量会先在作用域中被创建出来，**但此时还未进行词法绑定，是不能被访问的**，会抛出错误。
+
+从在作用域创建变量开始，到变量开始可被访问之间的一段时间，称之为**TDZ(暂时性死区)**
+
+----
+
+### **1、const声明的变量是绝对的不可变吗？**
+
+实际上，不是const变量的值不得改动，**而是变量指向的那个内存地址不得改动**。对于基础类型数据，值保存在变量指向的那个内存地址，等同于常量
+
+对于复合类型数据（主要是对象和数组），变量指向的内存地址，保存的只是一个指针，**const只能保证这个指针是不变的**，至于它指向的数据结构是否变化，是不可控的
+
+---
+
+## 1.3 请问ES6新增的Symbol数据类型有何特点？
+
+**symbol** 是一种基本数据类型 （[primitive data type](https://developer.mozilla.org/zh-CN/docs/Glossary/Primitive)）。`Symbol()`函数会返回**symbol**类型的值，该类型具有静态属性和静态方法。它的静态属性会暴露几个内建的成员对象；它的静态方法会暴露全局的symbol注册，且类似于内建对象类，但作为构造函数来说它并不完整，因为它不支持语法："`new Symbol()`"。
+
+每个从`Symbol()`返回的symbol值都是唯一的。一个symbol值能作为对象属性的标识符；这是该数据类型仅有的目的。更进一步的解析见—— [glossary entry for Symbol](https://developer.mozilla.org/en-US/docs/Glossary/Symbol)。
+
+
+
+为保证每个属性的名字都是独一无二，**从根本上防止属性名冲突**，ES6 引入Symbol数据类型
+
+Symbol是第7种基础数据类型，表示独一无二的值，Symbol 值通过Symbol函数生成，对象的属性名现在可以有两种类型，**一种是本来的字符串**，另一种就是**新增的 Symbol 类型**
+
+Symbol 数据类型特点：
+
+（1）、凡属性名属于 Symbol 类型，就是独一无二的，可以保证不会与其他属性名产生冲突
+
+（2）、Symbol数据类型可用 typeof 检测出来，返回“symbol”
+
+（3）、Symbol函数前不能使用 new 操作，会报错，**因为生成的 Symbol 是一个基础类型的值，不是对象**，可理解为它是一种类似于字符串的数据类型
+
+（4）、Symbol函数的参数只表示对当前Symbol值的描述，就算参数相同，Symbol函数的返回值是不相等的
+
+```js
+// 没有参数的情况 
+let s1 =Symbol();
+let s2 =Symbol();  
+s1 === s2 // false  
+
+// 有参数的情况 
+let s1 =Symbol('foo');
+let s2 =Symbol('foo');  
+s1 === s2 // false
+```
+
+（5）、在Symbol 作为属性名，遍历对象的时，该属性不会出现在for...in、for...of循环中，也不会被Object.keys()、Object.getOwnPropertyNames()、JSON.stringify()遍历返回
+
+但它并不是私有属性，Object.getOwnPropertySymbols()方法，可以获取指定对象的所有 Symbol 属性名。**该方法返回一个数组，成员是当前对象的所有用作属性名的 Symbol 值**
+
+**Reflect.ownKeys()方法**可以返回所有类型的键名，包括常规键名和 Symbol 键名
+
+**常用方法：Symbol.for()：（全局注册）**
+
+接受一个字符串作为参数，随后搜索有没有以该参数作为名称的 Symbol 值。如果有，就返回这个 Symbol 值，否则就新建一个以该字符串为名称的 Symbol 值，**并将其注册到全局，可以实现重新使用同一个 Symbol 值。**
+
+----
+
+## 1.4 请问ES6 class与ES5构造函数有什么联系？（如何用ES5的方式实现class？）
+
+class其实是一个语法糖，使得js的编码更清晰、更人性化、风格更贴合面向对象的思想，为代码编译器、检查器提供方便
+
+js生成新对象的传统方法是通过**构造函数**定义的，这种写法与传统的面向对象语言差异较大。故ES6引入了**class作为对象的生成模板**
+
+```js
+//ES5写法
+function Person(name, age) {
+    this.name = name;
+    this.age = age;
+}
+Person.prototype.toString = function() {
+    return'('+ this.name + ','+ this.age + ')';
+}
+
+var person = new Person('TOM', 20);
+console.log(person);// Person { name: 'Mia', age: 18 }
+
+//ES6写法
+class Person {
+    constructor(name, age) {
+    	this.name = name;
+    	this.age = age;
+    }
+    toString() {    
+    	return'('+ this.name + ','+ this.age + ')';
+    }
+}
+var person = new Person('TOM', 20);
+console.log(person);// Person { name: 'Mia', age: 18 }
+```
+
+由上述代码可得出：
+
+（1）class类可以看做是**构造函数的另一种写法**
+
+（2）class类的**数据类型就是函数**，typeof Person === 'function'为true
+
+（3）也可以说class的**底层依然是function构造函数**
+
+class类与构造函数区别：
+
+（1）class内部定义的方法都是**不可枚举的**（non-enumerable），ES5中prototype的方法是可枚举的
+
+（2）class**必须使用new调用**，否则会报错
+
+（3）继承：class用extends实现继承
+
+```js
+class Person{
+    constructor(skin,language){
+        this.skin=skin;
+        this.language=language;
+    }
+    say(){         
+        console.log('I am a Person')
+    }
+}
+```
+
+**（1）子类没有constructor时**
+
+```js
+class American extends Person{
+    aboutMe(){         
+        console.log(this.skin+' '+this.language)
+    }
+}
+```
+
+子类American继承父类Person，子类没有定义constrcutor，**则会默认添加一个**，并且在constrcutor中调用super函数，相当于调用父类的构造函数。**调用super函数是为了在子类中获得父类的this，调用之后this指向子类**，也就是父类.prototype.constructor.call(this)
+
+**（2）子类有constructor**
+
+```js
+class Chinese extends Person{
+    constructor(skin,language,positon){
+        //console.log(this);//在没有调用super之前输出this会报错
+        super(skin,language);
+        //super();//不给父类构造函数传参，父类的构造数的值为undefined       
+        console.log(this);
+        this.positon=positon;
+    }
+    aboutMe(){         
+        console.log(this.x+' '+this.y+' '+this.positon);
+    }
+}
+```
+
+子类必须在constructor方法中调用super方法，否则new实例时会报错。**因为子类没有自己的this对象，而是继承父类的this对象**。**如果不调用super函数，子类就得不到this对象。**super()作为父类的构造函数，只能出现在子类的constructor()中；但是super指向父类的原型对象，可以调用父类的属性和方法
+
+----
+
+## 1.5 请问你了解js模块化吗？
+
+js模块化所解决的问题：
+
+**命名冲突**：一些变量和函数命名可能相同
+
+**文件依赖**：一些需要从外部引入的文件数目、顺序
+
+js模块化将按照功能将一个软件切分成许多单独部分，每个部分为一个模块，然后再组装起来。分模块进行使用与维护，提高开发效率。
+
+js模块化发展过程：
+
+**（1）script标签**
+
+最早期的js文件加载方式，把每个文件看做一个模块，接口通常直接暴露在全局作用域（定义在window对象中）
+
+缺点：加载顺序取决于script标签书写顺序
+
+易污染全局作用域
+
+各文件间的依赖关系较繁琐
+
+**（2）CommonJS**
+
+每个文件就是一个模块，有自己的作用域，在一个文件里面定义的变量、函数、类，都是私有的，对其他文件不可见。在服务器端，模块的加载是运行时同步加载，**在浏览器端，模块需要提前编译打包处理。**
+
+```js
+//暴露模块:
+module.exports = value 或 exports.xxx = value
+
+//引入模块：
+require(xxx)
+//如果是第三方模块，xxx为模块名；如果是自定义模块，xxx为模块文件路径
+
+// module add.js
+module.exports = function add (a, b) { return a + b; }
+// main.js
+var {add} = require('./math');
+console.log('1 + 2 = ' + add(1,2);
+```
+
+**CommonJS加载模块是同步的，**只有加载完成，才能执行后面的操作，造成一个重大的局限：**不适用于浏览器**
+
+同步加载对服务器端影响不大，可把所有的模块都存在本地硬盘，同步加载，等待时间就是读取硬盘时间。**但对于浏览器，因为模块都放在服务器端，等待时间取决于网速的快慢，长时间等待会造成浏览器处于”假死”状态**
+
+**浏览器端的模块不能采用同步加载，**只能采用异步加载，便有了AMD
+
+**（3）AMD**
+
+非同步加载模块，允许指定回调函数，浏览器端一般采用AMD
+
+优点： 
+
+（1）适合在浏览器环境中异步加载模块 （2）可以并行加载多个模块
+
+```js
+//定义没有依赖的模块
+define(function(){
+    return 模块
+})
+//定义有依赖的模块
+define(['module1', 'module2'], function(m1, m2){
+   return 模块
+})
+//引入使用模块
+require(['module1', 'module2'], function(m1, m2){
+   //使用m1/m2
+})
+```
+
+**（4）CMD**
+
+**专门用于浏览器端**，模块的加载是异步的，模块使用时才会加载执行（延迟执行）
+
+```js
+//定义没有依赖的模块
+define(function(require, exports, module){
+    exports.xxx = value
+    module.exports = value
+})
+
+//定义有依赖的模块
+define(function(require, exports, module){
+    //引入依赖模块(同步)
+    var module2 = require('./module2')
+    //引入依赖模块(异步)
+    require.async('./module3', function (m3) {
+    })
+    //暴露模块
+    exports.xxx = value
+})
+//引入使用模块
+define(function (require) {
+    var m1 = require('./module1')
+    var m4 = require('./module4')
+    m1.show()
+    m4.show()
+})
+```
+
+CMD与AMD区别：
+
+最大的区别是对依赖模块的执行时机处理不同，二者皆为异步加载模块
+
+AMD**依赖前置**，js可以方便知道依赖模块是谁，立即加载
+
+CMD**就近依赖**，需要使用把模块变为字符串解析一遍才知道依赖了那些模块，延迟执行
+
+**（4）UMD**
+
+严格上说，UMD不能算是一种模块规范，它主要用来处理CommonJS、AMD、CMD的差异兼容，使模块代码能在不同的模块环境下都能正常运行，**是模块定义的跨平台解决方案**
+
+**（5）ES6模块化**
+
+设计思想：尽可能静态化，**使得编译时就能确定模块的依赖关系、输入和输出变量**，CommonJS 和 AMD 模块，都只能在运行时确定
+
+```js
+//导出模块方式
+var a = 0;
+export { a }; //第一种
+
+export const b = 1; //第二种 
+
+let c = 2;
+export default { c }//第三种 
+
+let d = 2;
+export default { d as e }//第四种，别名
+
+//导入模块方式
+import { a } from './a.js' //针对export导出方式，.js后缀可省略
+import main from './c' //针对export default导出方式,使用时用 main.c
+import 'lodash' //仅仅执行lodash模块，但是不输入任何值
+```
+
+主要由export和import两个命令构成，export用于规定模块的对外接口，import用于输入其他模块提供的功能
+
+**总结与对比：**
+
+**CommonJS：**主要用于服务端，同步加载模块，并不适合在浏览器环境
+
+**AMD：**在浏览器中异步加载模块，且可并行加载多个模块，但开发成本相对高，代码阅读和书写较困难，模块定义方式语义不顺畅
+
+**CMD：**与AMD相似，都用于浏览器，依赖就近，延迟执行，很容易在Node.js中运行
+
+**ES6模块化：**异步加载，有一个独立的模块依赖的解析阶段，实现相对简单，浏览器和服务器通用模块解决方案
+
+---
+
+## 2.1 请说说ES6新增了哪些对象方法？
+
+**（1）Object.is()**
+
+ES5中用 == 和 === 比较两个值是否相等，两者都有缺陷，== 会自动转换数据类型，=== NaN不等于自身，以及 +0 等于 -0。ES6 提出“Same-value equality”（**同值相等**）算法，即在所有环境中，只要两个值是一样的，则相等，Object.is()就是实现这个算法的新方法，用来比较两个值是否严格相等（除了两个特例，基本与 === 一致）
+
+```js
+Object.is('foo','foo') // true 
+Object.is({},{}) // false
+
+//与===的不同之处
+Object.is(+0,-0) // false 
+Object.is(NaN,NaN) // true
+
+console.log(+0 === -0);  //  true
+console.log(NaN === NaN);  //  false
+```
+
+**（2）Object.assign()**
+
+用于对象的合并，将源对象（source）的所有可枚举属性，复制到目标对象（target）
+
+常见用途：为对象添加属性、方法，克隆对象，合并多个对象，为属性指定默认值
+
+```js
+const target ={a:1};  
+const source1 ={b:2}; 
+const source2 ={c:3};  
+
+Object.assign(target, source1, source2); 
+console.log(target); // {a:1, b:2, c:3}
+```
+
+注意：
+
+- Object.assign()方法是**浅拷贝**，而不是深拷贝，**若源对象某个属性的值是对象，那么目标对象拷贝得到的是这个对象的引用**
+- Object.assign()拷贝的属性是有限制的，**只拷贝源对象的自身属性**，不拷贝继承属性，不拷贝不可枚举属性
+- 一旦遇到同名属性时，会直接替换，后面的属性会覆盖前面的属性
+- 若**参数不是对象，则会先转成对象**；由于undefined和null无法转成对象，若它们作为参数，就会报错  
+
+**（3）`__proto__`属性：**本质上是一个内部属性，而不是一个正式的对外的 API，若一个对象本身部署了`__proto__`属性，该属性的值就是对象的原型，实际上是调用了Object.prototype.`__proto__`
+
+**（4）Object.setPrototypeOf()：**功能与`__proto__`相同，用于设置一个对象的原型对象，相较于`__proto__`是ES6推荐的方法
+
+**（5）Object.getPrototypeOf() ：**用于读取一个对象的原型对象
+
+**（6）Object.keys()：**遍历对象自身（不含继承的）所有可遍历属性的键名，以数组的方式返回
+
+**（7）Object.values()：**遍历对象自身（不含继承的）所有可遍历属性的值，以数组的方式返回
+
+**（8）Object.entries() ：**遍历对象自身（不含继承的）所有可遍历属性的健值对，以数组的方式返回（只输出属性名非 Symbol 值的属性）
+
+```js
+var obj ={ foo:'bar', baz:42}
+Object.keys(obj) // ["foo", "baz"]
+Object.values(obj) // ["bar", 42]
+Object.entries(obj) // [ ["foo", "bar"], ["baz", 42] ]
+```
+
+**（9）Object.fromEntries()：**将一个键值对数组转为对象，Object.entries()逆操作
+
+```js
+Object.fromEntries([['foo','bar'],['baz',42]]) // { foo: "bar", baz: 42 }
+```
+
+**（10）Object.getOwnPropertyDescriptors()：**用来**获取一个对象的所有自身属性的描述符**，返回一个对象，所有原来的对象的属性名都是该对象的属性名，对应的属性值就是该属性的描述对象
+
+```js
+const obj = {
+  foo: 123,
+  get bar() { return 'abc' }
+};
+console.log(Object.getOwnPropertyDescriptors(obj));
+/*
+{
+  foo: { value: 123, writable: true, enumerable: true, configurable: true },
+  bar: {
+    get: [Function: get bar],
+    set: undefined,
+    enumerable: true,
+    configurable: true
+  }
+}
+*/
+```
+
+---
+
+## 2.2 请说说ES6新增了哪些数组方法？
+
+**（1）扩展运算符**
+
+扩展运算符：...，将一个数组转为用逗号分隔的参数序列，**该运算符主要用于函数调用**
+
+```js
+console.log(...[1,2,3]) // 1 2 3  
+console.log(1,...[2,3,4],5) // 1 2 3 4 5 
+```
+
+**（2）Array.from（）**
+
+用于将两类对象转为真正的数组：类似数组的对象（array-like object）和可遍历（iterable）的对象（包括 ES6 新增的数据结构 Set 和 Map）
+
+```js
+let arrayLike ={
+    '0':'a',
+    '1':'b',
+    '2':'c',    
+    length:3
+};
+
+// ES5的写法 
+var arr1 =[].slice.call(arrayLike); // ['a', 'b', 'c']  
+// ES6的写法 
+let arr2 = Array.from(arrayLike); // ['a', 'b', 'c']
+```
+
+**（3）数组实例的find（）和findIndex（）**
+
+Array.prototype.find（）：用于找出第一个符合条件的数组成员，它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为true的成员，**返回该成员**。如没有符合条件的成员，则返回undefined
+
+```js
+[1,4,-5,10].find((n)=> n <0) // -5
+```
+
+Array.prototype.findIndex（）：与find方法非常类似，返回第一个符合条件的数组**成员的位置**，如所有成员都不符合条件，则返回-1
+
+```js
+[1,5,10,15].findIndex(function(value, index, arr){
+    return value > 9;
+}) // 2
+```
+
+**（4）数组实例的includes（）**
+
+Array.prototype.includes（）：返回一个布尔值，表示某个数组是否包含给定的值，第二个参数表示搜索的起始位置，默认为0，与字符串的includes方法类似
+
+```js
+[1,2,3].includes(2) // true 
+[1,2,3].includes(3,3); // false
+```
+
+---
+
+## 2.3 请问你了解Set、Map数据结构吗？
+
+- **Set**
+
+类似于数组，但**成员的值是唯一的**，没有重复值
+
+最常见应用：去除数组重复值、去除字符串里面的重复字符
+
+```js
+// 去除数组的重复成员 
+[...newSet(array)]
+
+// 去除字符串里面的重复字符
+[...newSet('ababbc')].join('') // "abc"
+```
+
+- **WeakSet**
+
+类似于Set，也是不重复的值的集合，与Set区别：
+
+（1）WeakSet 的成员**只能是对象**，不能是其他类型的值
+
+（2）WeakSet 中的对象都是**弱引用**，即垃圾回收机制不考虑 WeakSet 对该对象的引用，如果其他对象都不再引用该对象，那垃圾回收机制会自动回收该对象所占用的内存，不考虑该对象还存在于 WeakSet 之中
+
+- **Map**
+
+js对象本质上是键值对的集合（Hash 结构），但是只能用字符串当作键名，**一些非字符串类型的值作为键名前，都会被自动转换为字符串**
+
+Map 正是为解决此问题，它类似于对象，也是键值对的集合，但是键名的范围不限于字符串，**各种类型的值（包括对象）都可以当作键名**
+
+相比Object 结构，Object 是“字符串——值”对应，**Map是“值——值”的对应**
+
+- **WeakMap**
+
+结构于Map类似，也是用于生成键值对的集合，与Map区别：
+
+（1）**只接受对象作为键名**（null除外），不接受其他类型的值作为键名
+
+（2）WeakMap的键名所指向的对象，不计入垃圾回收机制
+
+---
+
+## 2.4 请你了解ES6中的迭代器与生成器吗？
+
+Iterator迭代器是一种接口，为各种不同的数据结构提供统一的访问机制，**任何数据结构只要部署了 Iterator 接口，就可以完成迭代操作**（即遍历，依次处理该数据结构的所有成员）
+
+**Iterator 的主要作用：**
+
+（1）为各种数据结构，提供一个统一的、简便的访问接口
+
+（2）使得数据结构的成员能够按某种次序排列
+
+（3）当使用for...of循环遍历某种数据结构时，该循环会自动去寻找 Iterator 接口
+
+**常见默认调用 Iterator 场景：**
+
+for...of循环、解构赋值、扩展运算（...）、yield*
+
+遍历数组也会调用遍历器接口，**任何接受数组作为参数的地方，几乎都调用了遍历器接口**，如Array.from()、Map()、Set()等
+
+
+
+**Generator生成器**是一种异步编程解决方案，Generator 是一个状态机，封装了多个内部状态；它是一个迭代器对象生成函数，
+
+执行 Generator 函数会返回一个迭代器对象，也就是说，**Generator 函数除了状态机，还是一个遍历器对象生成函数**。返回的迭代器对象，可以依次遍历 Generator 函数内部的每一个状态。
+
+Generator 对比普通函数，外观上有两个主要特征：function关键字与函数名之间有一个**星号**，函数体内部使用yield表达式，定义不同的内部状态
+
+```js
+function* helloWorldGenerator(){   
+    yield 'hello';    //yield表达式
+    yield 'world';    //yield表达式
+    return'ending';
+}
+
+var hw = helloWorldGenerator();
+```
+
+代码块定义了一个 Generator 函数：helloWorldGenerator，它内部有两个yield表达式，有三个状态：hello，world 和 return 语句（结束执行）
+
+不同于普通函数，调用 **Generator 函数后不执行**，返回的不是函数运行结果，**而返回一个指向内部状态的指针对象**（迭代器对象）
+
+且必须调用遍历器对象的**next方法**，使得指针移向下一个状态。可理解为：每次调用next方法，内部指针就从函数头部或上一次停下来的地方开始执行，直到遇到下一个yield表达式（或return语句）为止。Generator 函数是分段执行的，**yield表达式是暂停执行的标记**，而**next方法可以恢复执行**。
+
+---
+
+## 2.5 请问箭头函数与普通函数有哪些区别？
+
+在外观上， 箭头函数省去了function关键字，使用“箭头”=>定义函数，使表达更加简洁，
+
+```js
+// 箭头函数写法 
+var f = v => v; 
+// 正常函数写法 
+var f = function(v){
+    return v;
+};
+
+// 箭头函数写法 
+var f =() => 5; 
+// 正常函数写法 
+var f = function(){
+    return 5
+};
+
+// 箭头函数写法 
+var sum =(num1, num2)=> num1 + num2; 
+// 正常函数写法 
+var sum = function( num1, num2 ){
+    return num1 + num2;
+};
+```
+
+箭头函数很大程度简化了回调函数
+
+```js
+// 正常函数写法 
+[1,2,3].map(function(x){
+    return x * x;
+}); 
+
+// 箭头函数写法 
+[1,2,3].map(x => x * x);
+```
+
+注意：
+
+（1）箭头函数不会创建自己的this，**只会从自己的作用域链的上一层继承this**
+
+（2）箭头函数的**this是定义时所在的对象**，不是使用时所在的对象
+
+（3）箭头函数的**this指向是固定的**
+
+（4）**不能**做构造函数，**不可**使用new命令，会报错
+
+（5）箭头函数是**没有原型，没有prototype属性**，故不可使用new
+
+（6）没有自己的arguments对象，**箭头函数中访问arguments实际上是外层局部（函数）执行环境中的值**
+
+（7）**不可使用yield命令**，不能用作Generator 函数
+
+一起看两道箭头函数的this指向的高频考题：（极有可能出代码题（面试官给代码，答输出））
+
+箭头函数的this指向取决于外层作用域中的this，**外层作用域或函数的this指向谁，箭头函数中的this便指向谁**；且一旦箭头函数的this绑定成功，也无法被再次修改，**类似于硬绑定**
+
+```js
+var a = 'window'
+var obj1 = {
+    a: 1,
+    fn1: function () {
+            return () => console.log(this.a)
+    }
+}
+var obj2 = {
+    a: 2
+};
+
+obj1.fn1()(); // 1
+obj1.fn1().call(obj2); // 1 
+
+obj1.fn1.call(obj2)(); // 2
+```
+
+obj1.fn1()()等价于：
+
+```js
+var fn = obj1.fn1(); //fn1的this指向obj1,箭头函数this参考fn1的this
+window.fn();//无法改变箭头函数this
+```
+
+obj1.fn1().call(obj2)等价于：
+
+```js
+var fn = obj1.fn1(); 
+fn.call(obj2);//显式绑定无法改变this
+```
+
+obj1.fn1.call(obj2)()等价于：
+
+```js
+var fn = obj1.fn1.call(obj2);//fn1的this此时指向obj2,箭头函数的this跟着变化
+window.fn();//隐式绑定无法改变箭头函数this
+```
+
+**注意：虽无法直接改变箭头函数this指向，但可以修改外层作用域的this间接修改箭头函数this**
+
+```js
+var name = 'window'  
+function Person(a) {   
+    this.a = a;   
+    this.fn1 = () => console.log(this.a);   
+    this.fn2 = function () {     
+        return () => console.log(this.a);   
+    }; 
+};
+var obj1 = new Person(1); 
+
+var obj2 = new Person(2);  
+
+obj1.fn1(); // 1
+obj1.fn1.call(obj2); // 1
+
+obj1.fn2()(); // 1
+obj1.fn2().call(obj2); // 1
+
+obj1.fn2.call(obj2)(); // 2
+```
+
+obj1.fn1()：构造函数在new的过程中this指向了obj1，于是箭头函数的this也指向obj1
+
+obj1.fn1.call(obj2)等价于：
+
+```js
+var fn = obj1.fn1;//箭头函数this指向obj1 
+fn.call(obj2);//箭头函数this无法改变
+```
+
+obj1.fn2()()：fn2指向obj1，箭头函数this同样指向obj1
+
+obj1.fn2().call(obj2)：箭头函数无法被直接修改
+
+obj1.fn2.call(obj2)()等价于：
+
+```js
+var fn = obj1.fn2.call(obj2);//fn2的this此时指向obj2,箭头函数的this跟着变化
+window.fn();//隐式绑定无法改变箭头函数this
+```
+
+
+
+----
+
+## 2.6 请说说你对Promise的理解？
+
+**Promise三个优点：**
+
+（1）可以很好地解决异步编程，将异步操作以同步操作的流程表达出来
+
+（2）让回调函数变成更加规范的链式写法，避免了层层嵌套的回调“地域”
+
+（3）可以处理并行任务，提供统一的对外接口
+
+**Promise三种状态：**
+
+（1）pending：进行中
+
+（2）fulfilled(resolved)：已成功
+
+（3）rejected：已失败
+
+**Promise三个特点：**
+
+（1）对象的状态不受外界影响，虽执行器函数的执行是**同步**的，但在Promise的状态未从Pending状态变更到其他状态前，then和catch里面的回调函数会放在队列里面等待状态变更以后才执行（**异步**）
+
+（2）一旦状态改变，就不会再变，任何时候都可以得到这个结果
+
+（3）只有两种状态改变可能：pending→fulfilled、pending→rejected
+
+**Promise三个缺点：**
+
+（1）一旦新建Promise就会立即执行，**无法中途取消**
+
+（2）**若不设置回调函数**，Promise内部抛出的错误，不会反应到外部
+
+（3）当处于pending状态时，**无法得知操作现阶段处于哪一个阶段**
+
+---
+
+## 3.1 请问你能手写Promise吗？
+
+Promise对象是一个构造函数，主要用来生成Promise实例
+
+构造函数接受一个函数作为参数，该函数的两个参数分别是 resolve函数 和 reject函数
+
+```js
+//创建一个Promise实例
+const promise =new Promise(function(resolve, reject){ 
+    // ... some code 
+    if(/* 异步操作成功 */){
+        resolve(value);
+    }else{
+        reject(error);
+    }
+});
+```
+
+**resolve 函数：**将 Promise 对象的状态从 pending → fulfilled ，在异步操作成功时调用，并将异步操作的结果，作为参数传递给注册在 then 方法上的回调函数（then方法的第一个参数）；
+
+**reject 函数：**将 Promise 对象的状态从 pending → rejected ，在异步操作失败时调用，并将异步操作报出的错误，作为参数传递给注册在 then 方法上的回调函数（then方法的第二个参数）
+
+**then方法：**定义在原型对象 Promise.prototype 上，作用是为 Promise 实例添加状态改变时的回调函数，返回一个新的 Promise 实例（不是原来那个）。第一个参数是 resolved 状态的回调函数，第二个参数是 rejected 状态的回调函数
+
+一步步写出Promise的结构（注意：写法有很多，大家一定要注重思考，理解Promise的工作原理，不要死记硬背一种代码）
+
+下面是ES6版本的整体代码，摘自网络，仅供参考：
+
+```js
+// 先定义三个常量表示状态
+const PENDING="pending";
+const FULFILLED="fulfilled";
+const REJECTED="rejected";
+
+// 新建 MyPromise 类
+class MyPromise{
+	constructor(executor){
+		// executor 是一个执行器，进入会立即执行
+		// 并传入resolve和reject方法
+		try{
+			executor(this.resolve,this.reject);
+		}catch(error){
+			this.reject(error);
+		}
+	}
+	
+	status=PENDING;  // 储存状态的变量，初始值是 pending
+	value=null;  // 成功之后的值
+	reason=null;  // 失败之后的原因
+	onFulfilledCallbacks=[];  //存储成功回调函数
+	onRejectedCallbacks=[];  //存储失败回调函数
+
+	// 更改成功后的状态
+	resolve=(value)=>{
+		// 只有状态是等待，才执行状态修改
+		if (this.status===PENDING) {
+			// 状态修改为成功
+			this.status=FULFILLED;
+			// 保存成功之后的值
+			this.value=value;
+			// resolve里面将所有成功的回调拿出来执行
+			while(this.onFulfilledCallbacks.length){
+				// Array.shift() 取出数组第一个元素，然后（）调用，shift不是纯函数，取出后，数组将失去该元素，直到数组为空
+				this.onFulfilledCallbacks.shift()(value);
+			}
+		}
+	}
+
+	// 更改失败后的状态
+	reject=(reason)=>{
+		// 只有状态是等待，才执行状态修改
+		if (this.status===PENDING) {
+			// 状态成功为失败
+			this.status=REJECTED;
+			// 保存失败后的原因
+			this.reason=reason;
+			// resolve里面将所有失败的回调拿出来执行
+			while(this.onRejectedCallbacks.length){
+				this.onRejectedCallbacks.shift()(reason);
+			}
+		}
+	}
+
+	then(onFulfilled,onRejected){
+		const realOnFulfilled=typeof onFulfilled==="function" ? onFulfilled : value=>value;
+		const realOnRejected=typeof onRejected==="function" ? onRejected : reason=>{ throw reason};
+		// 为了链式调用这里直接创建一个 MyPromise，并在后面 return 出去
+		const promise2=new MyPromise((resolve,reject)=>{
+			const fulfilledMicrotask=()=>{
+				//创建一个微任务等待 promise2 完成初始化
+				queueMicrotask(()=>{
+					try{
+						//获取成功回调函数的执行结果
+						const x=realOnFulfilled(this.value);
+						//传入 resolvePromise 集中处理
+						resolvePromise(promise2,x,resolve,reject);
+					}catch(error){
+						reject(error);
+					}
+				});
+			}
+
+			const rejectedMicrotask=()=>{
+				// 创建一个微任务等待 promise2 完成初始化
+				queueMicrotask(()=>{
+					try{
+						//调用失败回调，并且把原因返回
+						const x=realOnRejected(this.reason);
+						//传入 resolvePromise 集中处理
+						resolvePromise(promise2,x,resolve,reject);
+					}catch(error){
+						throw error;
+					}
+				});
+			}
+
+			//判断状态
+			if (this.status===FULFILLED) {
+				fulfilledMicrotask();
+			}else if (this.status===REJECTED) {
+				rejectedMicrotask();
+			}else if(this.status===PENDING){
+				// 等待
+				// 因为不知道后面状态的变化情况，所以将成功回调和失败回调存储起来
+				// 等到执行成功失败函数的时候再传递
+				this.onFulfilledCallbacks.push(fulfilledMicrotask);
+				this.onRejectedCallbacks.push(rejectedMicrotask);
+			}
+		});
+		return promise2;
+	}
+
+	//resolve 静态方法
+	static resolve(parameter){
+		//如果传入 MyPromise 就直接返回
+		if (parameter instanceof MyPromise) {
+			return parameter;
+		}
+		//转成常规方式
+		return new MyPromise(resolve=>{
+			resolve(parameter);
+		});
+	}
+
+	// reject 静态方法
+	static reject(reason){
+		return new MyPromise((resolve,reject)=>{
+			reject(reason);
+		});
+	}
+}
+
+function reslovePromise(promise2,x,resolve,reject){
+	//如果相等了，说明return的是自己，抛出类型错误并返回
+	if (promise2===x) {
+		return reject(new TypeError("Chaining cycle detected for promise #<Promise>"));
+	}
+	//判断x是不是 MyPromise 实例对象
+	if (x instanceof MyPromise) {
+		//执行 x，调用 then 方法，目的是将其状态变为 fulfilled 或者 rejected
+		//x.then(value=>resolve(value),reason=>reject(reason));
+		// 简化之后
+		x.then(resolve,reject);
+	}else{
+		//普通值
+		resolve(x);
+	}
+}
+
+module.exports=MyPromise;
+```
+
+**Promise.all()：**
+
+将多个Promise，包装成一个新的Promise，只有当所有Promise都成功，新的Promise才成功，一个失败就返回失败的Promise
+
+一些日常开发中十分实用的点：
+
+（1）Promise.all()获得的成功结果的数组里面的数据顺序和Promise.all()接收到的数组顺序是一致的，即便后面的结果返回得慢
+
+（2）Promise.all()可以充分利用并行的优势，**返回结果的时间是最长请求的时间**，这样可以更快处理请求的结果
+
+**Promise.race()：**
+
+将多个Promise，包装成一个新的Promise，**新Promise的结果由第一个完成的Promise决定**， 第一个成功则返回成功的Promise，第一个失败直接返回失败的Promise
+
+```js
+/*Promise 函数对象all方法，返回一个promise 只有当所有promise都成功，才成功，一个失败就失败*/
+function all(promises){
+    const values = new Array(promises.length) //用来保存所有成功value的数组,长度等于promises的长度
+    //定义计数器，用来保存成功promise的数量
+    let resolvedCount = 0
+    
+    //返回一个新的promise
+    return new Promise((resolve,reject) =>{
+        //遍历promises获取每个promise的结果
+        promises.forEach((p,index) => {
+            Promise.resolve(p).then(
+                value => {
+                //成功一次 加一
+                    resolvedCount++
+                // p成功，将成功的value保存values,不能直接push，得按照promises的顺序存
+                    values[index] = value
+                    //如果全部成功了，将return的promises改为成功
+                    if (resolvedCount===promises.length) {
+                        resolve(values)
+                    }
+                },
+                reason => { //一个失败，整个失败
+                    reject(reason)
+                }
+            )
+        })
+    })
+}
+
+/*Promise 函数对象race方法，返回一个promise，其结果由第一个完成的promise决定，看传入的promise数组 里谁最先完成，看第一个完成的是成功/失败*/
+function race(promises){
+    return new Promise((resolve,reject) =>{
+    //遍历promises获取每个promise的结果
+        promises.forEach((p,index) => {
+            Promise.resolve(p).then(
+                value => {
+               //一旦有成功的，return的promise变为成功
+                    resolve(value)
+                },
+                reason => { //一个失败，return的promise变为失败
+                    reject(reason)
+                }
+            )
+        })
+    })
+}
+```
+
+----
+
+## 3.2 请问你了解async/await吗？
+
+async/await本质上就是一个语法糖，底层实现是带有执行器的 Generator 函数，async函数就是将 Generator 函数的星号（*）替换成async，将yield替换成await
+
+可简单理解为 async 用于申明一个 函数 是异步的，**而 await 可认为是 async wait 简写**，用于等待一个异步方法执行完成
+
+**async 函数：**返回的是一个 Promise 对象。如果在函数中 return一个直接量，async 会把这个直接量通过 Promise.resolve()封装成 Promise 对象
+
+```js
+Promise.resolve(x)
+//可看作为下面这句的简写
+new Promise(resolve => resolve(x))
+```
+
+**Promise.resolve(x)：**可以用于快速封装字面量对象或其他对象，将其封装成 Promise 实例
+
+若最外层没有 await 获取其返回值的情况下，应该用原来的方式：.then()链来处理返回的个 Promise 对象
+
+**await ：**通常情况 async 函数返回一个 Promise 对象，**故 await 可以用于等 Promise 对象，实际上它在等一个返回值**。不仅仅用于等 Promise 对象，它可以等任意表达式的结果，所以，await 后面实际是可以接普通函数调用或者直接量
+
+注意：await 是一个运算符，用于组成表达式，**表达式的运算结果取决于等到的返回值**：
+
+（1）、返回值不是一个 Promise 对象，运算结果直接为该返回值
+
+（2）、返回值是一个 Promise 对象，**await 会阻塞后面的代码**，等 Promise 对象完成resolve，随后得到 resolve 的值，作为 await 表达式运算结果，**通常 async 函数调用不会造成阻塞**，因为**它内部所有的阻塞都被封装在一个 Promise 对象中异步执行了**
+
+**async/await 的优势：**处理 then 链，相当于进一步优化回调问题
+
+可利用如下代码进行对比，假设有一共任务，分多个步骤完成，每个步骤都是异步的，而且依赖于上一个步骤的结果。先用 setTimeout模拟异步操作：
+
+```js
+/**
+ * 传入参数 n，表示这个函数执行的时间（毫秒）
+ * 执行的结果是 n + 200，这个值将用于下一步骤
+ */
+function takeLongTime(n) {
+    return new Promise(resolve => {
+        setTimeout(() => resolve(n + 200), n);
+    });
+}
+function step1(n) {
+    console.log(`step1 with ${n}`);
+    return takeLongTime(n);
+}
+function step2(n) {
+    console.log(`step2 with ${n}`);
+    return takeLongTime(n);
+}
+function step3(n) {
+    console.log(`step3 with ${n}`);
+    return takeLongTime(n);
+}
+```
+
+用 Promise 方式来实现这三个步骤的处理：
+
+```js
+function doIt() {
+    console.time("doIt");
+    const time1 = 300;
+    step1(time1)
+        .then(time2 => step2(time2))
+        .then(time3 => step3(time3))
+        .then(result => {
+            console.log(`result is ${result}`);
+            console.timeEnd("doIt");
+        });
+}
+
+doIt();
+```
+
+用 async/await 实现：
+
+```js
+async function doIt() {
+    console.time("doIt");
+    const time1 = 300;
+    const time2 = await step1(time1);
+    const time3 = await step2(time2);
+    const result = await step3(time3);
+    console.log(`result is ${result}`);
+    console.timeEnd("doIt");
+}
+
+doIt();
+```
+
+这个代码看起来会更清晰明了，几乎跟同步代码一样
+
+---
+
+## 3.3 请问async/await中如何进行错误处理？
+
+await 后的异步操作出错，等同于async函数返回的 Promise 对象被reject，**所以最好把await 命令放在 try...catch 代码块中**
+
+```js
+//写法示例
+async function myFunction(){
+    try{     
+        await somethingThatReturnsAPromise();
+    }catch(err){     
+        console.log(err);
+    }
+} 
+```
+
+此外，可在 await 后面的 Promise 对象再跟一个catch方法，处理前面可能出现的错误
+
+对于多个 **await**命令后面的异步操作，**如果不存在继发关系，最好让它们同时触发**（可用promise.all()）
+
+```js
+let foo = await getFoo();
+let bar = await getBar();
+
+// 改写成：
+let [foo, bar] = await Promise.all([getFoo(), getBar()]);
+```
+
+注意：await **只能用在async函数之中**，如果用在普通函数，会报错
+
+---
+
+## 3.4 请问什么是Proxy？
+
+Proxy 是 ES6 为了操作对象引入的一个新API，可以对目标对象的读取、函数调用等操作进行拦截，然后进行处理
+
+**Proxy不直接操作对象，更像一种代理模式**，通过对象的代理对象进行操作，在进行这些操作时，可以添加一些额外操作
+
+基本用法：
+
+一个 Proxy 对象由两个部分组成： target 、handler 。在通过 Proxy 构造函数生成实例对象时，需要提供这两个参数：target 为目标对象， handler 是一个对象，声明了代理 target 的指定行为
+
+```js
+//具体实例:
+let target = {     
+    name: 'Tom',     
+    age: 24 
+} 
+let handler = {     
+    get: function(target, key) {         
+        console.log('getting '+key);         
+        return target[key]; // 不是target.key     
+    },     
+    set: function(target, key, value) {        
+        console.log('setting '+key);         
+        target[key] = value;     
+    } 
+} 
+let proxy = new Proxy(target, handler) 
+proxy.name     // 实际执行 handler.get 
+proxy.age = 25 // 实际执行 handler.set 
+// getting name 
+// setting age
+ // 25
+```
+
+Proxy的常用实例方法：
+
+（1）、**get(target, propKey, receiver)，**用于 target 对象上 propKey 的读取操作
+
+```js
+let exam ={     
+    name: "Tom",     
+    age: 24 
+} 
+let proxy = new Proxy(exam, {   
+    get(target, propKey, receiver) {     
+        console.log('Getting ' + propKey);     
+        return target[propKey];   
+    } 
+}) 
+proxy.name  
+// Getting name 
+// "Tom"
+```
+
+（2）、set(target, propKey, value, receiver)，用于拦截 target 对象上的 propKey 的赋值操作。如果目标对象自身的某个属性，不可写且不可配置，那set方法将不起作用
+
+```js
+let validator = {     
+    set: function(obj, prop, value) {         
+        if (prop === 'age') {             
+            if (!Number.isInteger(value)) {                 
+                throw new TypeError ('The age is not an integer');}                                          }            
+             if (value > 200) {                 
+                 throw new RangeError('The age seems invalid'); }         
+             }         // 对于满足条件的 age 属性以及其他属性，直接保存                     
+             obj[prop] = value;     
+         } 
+ };
+
+ let proxy= new Proxy({}, validator) 
+ proxy.age = 100; 
+ proxy.age           // 100 
+ proxy.age = 'oppps' // 报错 
+ proxy.age = 300     // 报错
+```
+
+---
+
+## 3.5 请问什么是Reflect ？
+
+Reflect 同样也是 ES6 为了操作对象引入的一个新API，可以**用于获取目标对象的行为**，与 Object 类似，但是更易读，它的方法与 Proxy 是对应的
+
+ES6 将Object的一些明显属于语言内部的方法移植到了 Reflect 对象上（现阶段某些方法同时存在于 Object 和 Reflect 对象上）
+
+Reflect 对象对某些方法的返回结果进行了修改，使其更合理
+
+Reflect 对象使用函数的方式实现了 Object 的命令式操作
+
+（1）、**Reflect.get(target, name, receiver)，**查找并返回 target 对象的 name 属性
+
+```js
+let exam = {     
+    name: "Tom",     
+    age: 24,     
+    get info(){         
+        return this.name + this.age;     
+    } 
+} 
+Reflect.get(exam, 'name'); // "Tom"  
+// 当target对象中存在 name 属性的getter方法， getter方法的this会绑定
+
+// receiver 
+let receiver = {     
+    name: "Jerry",     
+    age: 20 
+} 
+Reflect.get(exam, 'info', receiver); // Jerry20  
+
+// 当 name 为不存在于target对象的属性时，返回 undefined 
+Reflect.get(exam, 'birth'); // undefined   
+
+// 当 target 不是对象时，会报错 
+Reflect.get(1, 'name'); // TypeError
+```
+
+（2）、**Reflect.set(target, name, value, receiver)，**将 target 的name属性设置为 value，返回值为 boolean ，true 表示修改成功，false 表示失败（当 target 为不存在的对象时，会报错）
+
+```js
+let exam = {     
+    name: "Tom",     
+    age: 24,     
+    set info(value){         
+        return this.age = value;     
+    } 
+} 
+exam.age; // 24 
+Reflect.set(exam, 'age', 25); // true 
+exam.age; // 25   
+
+// value为空时会将name属性清除 
+Reflect.set(exam, 'age', ); // true 
+exam.age; // undefined   
+
+// 当target对象中存在name属性setter方法时，setter方法中的this会绑定receiver, 所以修改的实际上是receiver的属性, 
+let receiver = {     
+    age: 18 
+} 
+Reflect.set(exam, 'info', 1, receiver); // true 
+receiver.age; // 1   
+let receiver1 = {     
+    name: 'oppps' 
+} 
+Reflect.set(exam, 'info', 1, receiver1); 
+receiver1.age; // 1
+```
+
+（3）**、Reflect.ownKeys(target)，**用于返回 target 对象的所有属性，等同于 Object.getOwnPropertyNames +Object.getOwnPropertySymbols
+
+```js
+var exam = {   
+    name: 1,   
+    [Symbol.for('age')]: 4 
+} 
+Reflect.ownKeys(exam) // ["name", Symbol(age)]
+```
+
+----
