--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -17122,6 +17122,59 @@ var heightChecker = function(heights) {
 
 ```
 
+---
+
+## 1089.复写零
+
+给你一个长度固定的整数数组 arr，请你将该数组中出现的每个零都复写一遍，并将其余的元素向右平移。
+
+注意：请不要在超过该数组长度的位置写入元素。
+
+要求：请对输入的数组 就地 进行上述修改，不要从函数返回任何东西。
+提示：
+
+1 <= arr.length <= 10000
+0 <= arr[i] <= 9
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {void} Do not return anything, modify arr in-place instead.
+ */
+var duplicateZeros = function(arr) {
+    let n = arr.length;
+    let top = 0;
+    let i = -1;
+    while (top < n) {
+        i++;
+        if (arr[i] !== 0) {
+            top++;
+        } else {
+            top += 2;
+        }
+    }
+    let j = n - 1;
+    if (top === n + 1) {
+        arr[j] = 0;
+        j--;
+        i--;
+    }
+    while (j >= 0) {
+        arr[j] = arr[i];
+        j--;
+        if (arr[i] === 0) {
+            arr[j] = 0;
+            j--;
+        }
+        i--;
+    }
+};
+
+let arr = [0,4,1,0,0,8,0,0,3];
+duplicateZeros(arr);
+console.log(arr);
+```
+
 
 
 
