--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -11505,6 +11505,59 @@ console.log(result);
 
 ---
 
+## 508.出现次数最多的子树元素和
+
+给你一个二叉树的根结点 root ，请返回出现次数最多的子树元素和。如果有多个元素出现的次数相同，返回所有出现次数最多的子树元素和（不限顺序）。
+
+一个结点的 「子树元素和」 定义为以该结点为根的二叉树上所有结点的元素之和（包括结点本身）。
+提示:
+
+节点数在 [1, 104] 范围内
+-105 <= Node.val <= 105
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var findFrequentTreeSum = function(root) {
+    const sums = new Map();
+    let ans = [];
+    let maxSumCount = 0;
+    const dfs = (root) => {
+        let sum = root.val;
+        if (root.left !== null) {
+            sum += dfs(root.left);
+        }
+        if (root.right !== null) {
+            sum += dfs(root.right);
+        }
+        sums.set(sum, sums.has(sum) ? sums.get(sum) + 1 : 1);
+        if (sums.get(sum) > maxSumCount) {
+            maxSumCount = sums.get(sum);
+            ans = [sum];
+        }else if (sums.get(sum) === maxSumCount) {
+            ans.push(sum);
+        }
+        return sum;
+    }
+    dfs(root);
+    return ans;
+};
+```
+
+
+
+----
+
 ## 509. 斐波那契数
 
 斐波那契数 （通常用 F(n) 表示）形成的序列称为 斐波那契数列 。该数列由 0 和 1 开始，后面的每一项数字都是前面两项数字的和。也就是：
