--- a/面试学习题目/前端面试_12_算法与手写题部分.md
+++ b/面试学习题目/前端面试_12_算法与手写题部分.md
@@ -1,4 +1,54 @@
-   
+   5.19 代码题：url GET参数写代码获取
+
+**参考答案**：
+
+方法一：采用正则表达式获取地址栏参数 (代码简洁，重点正则）
+
+```js
+function getQueryString(name) {
+    let reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");// 正则语句
+    let r = window.location.search.substr(1).match(reg);// 获取url的参数部分，用正则匹配
+    if (r != null) {
+        return decodeURIComponent(r[2]); // 解码得到的参数
+    };
+    return null;
+ }
+```
+
+方法二：split拆分法 (代码较复杂，较易理解)
+
+```js
+function GetRequest() {
+   const url = location.search; //获取url中"?"符后的字串
+   let theRequest = new Object();
+   if (url.indexOf("?") != -1) { // 判断是否是正确的参数部分
+      let str = url.substr(1); // 截取参数部分
+      strs = str.split("&");  // 以‘&’为分割符获取参数数组
+      for(let i = 0; i < strs.length; i ++) {
+         theRequest[strs[i].split("=")[0]]=unescape(strs[i].split("=")[1]);
+      }
+   }
+   return theRequest;
+}
+```
+
+方法三：split拆分法(易于理解，代码中规)
+
+```js
+function getQueryVariable(variable){
+       let query = window.location.search.substring(1); // 获取url的参数部分
+       let vars = query.split("&"); // 以‘&’为分割符获取参数数组
+       for (let i=0;i<vars.length;i++) { // 遍历数组获取参数
+               let pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+}
+```
+
+---
+
+#### 
 
 ----
 
